--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp5.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp5.html
@@ -74,7 +74,7 @@ string str4("new str");     // строка new str
     <li><strong>.end()</strong> возвращает итератор за последним элементом строки.</li>
     <li><strong>sort(str.begin(), str.end())</strong> сортирует символы в строке.</li>
     <li><strong>.append(str)</strong> добавить в конце строки строку str;</li>
-    <li><strong>.substr(pos)</strong> возвращает подстроку с определенной позиции;</li>
+    <li><strong>.substr(pos)</strong> возвращает подстроку с определенной позиции и до конца;</li>
     <li><strong>.substr(pos, count)</strong> возвращает подстроку длины count с позиции pos;</li>
     <li><strong>.resize(size)</strong> изменяет размер строки;</li>
     <li><strong>.find(str)</strong> находит позицию первого вхождения подстроки;</li>
@@ -116,6 +116,8 @@ int pos1 = str1.find(str2);  // 0
 int pos2 = str1.rfind(str2); // 10
 </pre>
   <p>В строке "abcdabc123abcfd", есть 3 позиции вхождения подстроки "abc".</p>
+  <p>Методы find и rfind - поиск подстроки в строке, очень медленные. Они работают за O(N²). Для поиска они используют цикл в цикле. Перебирают первую строку и для каждого символа первой строки перебирают вторую строку.</p>
+  <p>В спортивном программировании есть более быстрые методы: КМП (Кнута-Мориса-Прата) и Z-функция. Они работают за O(N).</p>
 
   <h4>.insert() .erase()</h4>
 <pre>
@@ -188,15 +190,22 @@ string res = to_string(num);
   <div class="anchor" id="p3"></div>
   <h3>getline()</h3>
 
-  <p>Функция getline в C++ используется для считывания строки из входного потока, такого как файл или стандартный ввод (cin).</p>
+  <p>Функция cin считывает не всю строку, а только до первого пробельного символа. Пробельные символы ' ', '\t', '\n' нельзя считать функцией cin.</p>
+  <code>string str1; // первый способ</code>
+  <code>cin >> str1; // считывает до пробельного символа</code>
+  <p>Строку содержащую пробельные символы надо считывать фуркцией getline</p>
+  <p>Функция getline считывает всю строку до символа '\n'.</p>
   <p>Она позволяет считывать строки, включая пробелы, и сохранять их в переменных типа string.</p>
-<pre>
-string str1;
-string str2;
-getline(cin, str1);
-getline(cin, str2, ':');
-</pre>
-  <p>Пробельные символы ' ', '\t', '\n' нельзя считать функцией cin. Строку содержащую пробельные символы надо считывать фуркцией getline</p>
+  <p>Первым аргументов функция getline принимает объект cin для считывания из входного потока. Кроме входного потока, можно считывать из файла, если первым аргументом будет указатель на файл.</p>
+  <p>Вторым аргументом функция getline принимает имя строки, куда нужно записать считанную строку.</p>
+  <code>getline(cin, str1); // считывает до '\n'</code>
+  <p>Третий аргумент необязательный. Он указывает символ-разделитель. Если указан символ-разделитель, то функция getline будет считывать не до конца строки, а до символа-разделителя. Если требуется больше одного символа-разделителя, то их можно перечислять в двойных кавычках.</p>
+  <code>string str2; // второй способ</code>
+  <code>getline(cin, str2, ':'); // считывает до символа ':'</code>
+
+  <p>Если нужно считать заданное число символов, например 256</p>
+  <code>string str3; // третий способ</code>
+  <code>cin.getline(str3, 256, ':');</code>
 </article>
 
 
