--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp6.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp6.html
@@ -61,7 +61,7 @@
   return возвращаемое значение;
 }
 </pre>
-  <p>Если функция ничего не должна возвращать, её можно объявить как void.</p>
+  <p>Если функция ничего не должна возвращать, её тип объявляется как void.</p>
   <p>В C++ есть возможность передавать аргументы в функции двумя способами.</p>
   <ol>
     <li>
