--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp9.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp9.html
@@ -118,7 +118,7 @@ while (u2 &lt; B.size()) {
   <div class="anchor" id="t2"></div>
   <h3>Задача 2. Поддержка отрезка</h3>
 
-  <p>Рассмотрим задачу о поддержании длины "хорошего" отрезка в массиве. Дан массив, определить максимальную длину "хорошего" подмассива. Например, максимальный подмассив в котором нет нуле.</p>
+  <p>Рассмотрим задачу о поддержании длины "хорошего" отрезка в массиве. Дан массив, определить максимальную длину "хорошего" подмассива. Например, максимальный подмассив в котором нет нулей.</p>
   <p>Наивное решение этой задачи является for for for, с трудоемкостью O(n<sup>3</sup>), где мы перебираем границы всех вариантов отрезков и перепроверяем условие хорошести на отрезке</p>
 
   <details>
@@ -142,6 +142,27 @@ for (int i = 0; i &lt; n; i++) {
   </details>
   <p>В каждой задаче понятие "хороший" индивидуально.</p>
   <p>Пусть у нас есть дополнительные ограничения. Если отрезок хороший, то любой его подотрезок тоже хороший. Если отрезок плохой, то любой его подотрезок либо плохой, либо хороший</p>
+  <p>Заведем два указателя l и r и поставим их на первый элемент. Есть два варианта. Первый элемент или хороший или нет. Если первый элемент хороший, в цикле будем двигать правый указатель вправо и проверять отрезок все еще хороший или нет. Если все еще хороший, то дальше двигаем правый указатель вправо. Если уже плохой, или первый элемент был плохой, то двигаем левый указатель вправо до тех пор, пока не найдем хороший элемент или отрезок.</p>
+  <p>Рассмотрим два алгоритма поиска максимальной длины хорошего отрезка - школьный и студенческий. У них одинаковая сложность O(n).</p>
+  <p>Школьный алгоритм: двигаем вправо на 1 левую или правую границу отрезка.</p>
+<pre>
+while (r &lt; n) {
+  if (отрезок хороший) {
+    r++;
+  } else {
+    l++;
+  }
+}
+</pre>
+  <p>Студенческий алгоритм: всегда двигаем правую границу, поэтому создадим ее как счетчик в цикле.</p>
+<pre>
+for (int r = 0; r &lt; n; r++) {
+  ... // какие-то действия
+  while (отрезок плохой) {
+    l++;
+  }
+}
+</pre>
 </article>
 
 
@@ -200,7 +221,8 @@ using namespace std;
 
 int main() {
   // ввод данных
-  int n, t;
+  int n; // числол книг
+  int t; // число минут
   cin >> n >> t;
   vector&lt;int&gt; A(n);
   for (int i = 0; i &lt; n; i++) {
@@ -211,6 +233,7 @@ int main() {
   int sum = 0;
   int res = 0;
   int l = 0;
+
   for (int r = 0; r &lt; n; r++) {
     sum += A[r];
     while (sum > t) {
