--- a/src/components/alg/alg-conspect/yargu2/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/yargu2/pages/elem-sp1.html
@@ -43,6 +43,109 @@
   <div class="anchor" id="p1"></div>
   <h3>Основы C++ 1. Вводное занятие</h3>
 
+  <p>Программа на языке C++ состоит из шести частей.</p>
+  <ol>
+    <li>Библиотеки</li>
+    <li>Пространство имен</li>
+    <li>Глобальные переменные</li>
+    <li>Структуры и классы</li>
+    <li>Функции. Задачи разбиваются на маленькие подзадачи.</li>
+    <li>Функция main</li>
+  </ol>
+
+  <h4>Тип данных int</h4>
+  <p>Занимает 4 байта. Хранит числа от -2<sup>31</sup> до 2<sup>31</sup> - 1 (от -10<sup>9</sup> до 10<sup>9</sup>)</p>
+
+  <h4>Тип данных long long</h4>
+  <p>Занимает 8 байт. Хранит числа от -2<sup>63</sup> до 2<sup>63</sup> - 1 (от -8*10<sup>18</sup> до 8*10<sup>18</sup>)</p>
+
+  <h4>Тип unsigned int</h4>
+  <p>Занимает 4 байта. Хранит числа от 0 до 2<sup>32</sup> - 1.</p>
+
+  <h4>Тип данных double</h4>
+  <p>Занимает 8 байт. Хранит 16 соседних знаков. Вещественное число представляется числом с точкой. Есть цифры до точки и после точки. Количество цифр слева от точки плюс количество цифр справа от точки не может быть больше 16.</p>
+
+  <h4>Тип данных long double</h4>
+  <p>Занимает 10 байт. Хранит 20 соседних знаков.</p>
+
+  <h4>Тип данных bool</h4>
+  <p>Занимает 1 байт. Хранит только два значения либо true, либо false.</p>
+
+  <h4>Тип данных char</h4>
+  <p>Занимает 1 байт. Хранит число от 0 до 255. Это число соответствует символу из таблицы символов ASCII.</p>
+
+  <h4>Переменные</h4>
+  <p>Чтобы сохранить в памяти какую-нибудь информацию, нужно создать переменную. Сначала пишется тип переменной, который мы выбираем из стандартных типов, или создаем свой собственный тип. Потом пишется ее имя, которое мы придумываем сами.</p>
+  <code>int a;</code>
+  <p>При создании переменной в ней хранится минимальное значение из диапазона. Если значение переменной известно заранее, то при создании переменную можно сразу инициализировать.</p>
+  <code>int b =10;</code>
+
+  <h4>Ограничения</h4>
+  <p>Все задачи по спортивному программированию имеют два ограничения: по времени и по памяти. Ограничение по времени нужно для того чтобы программа не работала бесконечно, а выдавала ответ, например, за две секунды. Ограничение по памяти нужно для того чтобы программа не заняла всю свободную память для своих нужд, а занимала , например, не более 256 мегабайт.</p>
+
+  <h4>Ввод и вывод информации</h4>
+  <p>Ввод информации используется для получения исходных данных для задачи. Вывод информации используется для выдачи результата работы программы. Для потокового ввода и вывода необходимо подключить библиотеку iostream</p>
+  <code>include &lt;iostream&gt;</code>
+  <p>Для сокращения названия функций для ввода и вывода информации, необходимо подключить пространство имен</p>
+  <code>using namespace std;</code>
+  <p>Теперь вместо std::cin можно писать cin, вместо std::cout можно писать cout.</p>
+  <p>Для ввода данных в одну переменную надо написать</p>
+  <code>cin >> a;</code>
+  <p>Такая операция ввода вернет объект cin, который можно использовать еще раз. И так далее по цепочке. Поэтому для ввода данных в несколько переменных можно написать</p>
+  <code>cin >> a >> b >> c;</code>
+  <p>Для вывода числа 5 надо написать</p>
+  <code>cout &lt;&lt; 5;</code>
+  <p>Такая операция ввода вернет объект cout, который можно использовать еще раз. И так далее по цепочке. Поэтому для вывода нескольких данных можно написать</p>
+  <code>cout &lt;&lt; 5 &lt;&lt; ' ' &lt;&lt; 3 &lt;&lt; ' ' &lt;&lt; 9;</code>
+  <p>Между данными необходимо использовать символ разделитель, например пробел.</p>
+
+  <h4>Асимптотика</h4>
+  <p>В зависимости от входных параметров, праграмма выполнит определенное количество действий. Асимптотика это оценка количества действий программы (оценка сложности, трудоемкости). В спортивном программировании всегда подсчитывают наихудшую асимптотику. Потому что на тестовых данных всегда будет тест на очень больших входных данных, который проверяет наихудшую асимптотику программы.</p>
+  <p>Обычно за 1 секунду компьютер выполняет около 4*10⁹ простейших операций. Эта константа связана с железом на котором работает сервер. Бывают серверы по-мощнее, бывают по-слабее. Это средняя оценка.</p>
+
+  <h4>Линейная сложность O(n)</h4>
+  <p>Если входные данные n ≤ 10⁵. И мы выполняем один цикл по всем входным данным, то будет выполнено c * n  = c * 10⁵ операций, где c это некоторая константа.</p>
+  <p>Поскольку 4*10⁹ > 10⁵, то алгоритм с линейной сложностью <strong>решит</strong> задачу за 1 секунду.</p>
+
+  <h4>Квадратичная сложность O(n²)</h4>
+  <p>Если входные данные n ≤ 10⁵. И мы выполняем два вложенных цикла по всем входным данным, то будет выполнено c * n²  = c * 10¹⁰ операций, где c это некоторая константа.</p>
+  <p>Поскольку 10¹⁰ > 4*10⁹, то алгоритм с квадратичной сложностью <strong>не решит</strong> задачу за 1 секунду.</p>
+
+  <h4>Массивы</h4>
+  <p>Массив это набор подряд идущих ячеек памяти с одним типом данных. Массив может быть статический или динамический.</p>
+  <p>Создадим динамический массив через указатель</p>
+  <code>int *A;</code>
+  <p>Создав указатель, мы можем выделить нужное количество элементов начиная с этого места. Выделим память необходимую для хранения n элементов типа int</p>
+  <code>A = new int[n];</code>
+  <p>Чтобы обратиться к элементу под номером i в массиве, нужно написать имя массива и в квадратных скобках номер элемента</p>
+  <code>A[i] = 15;</code>
+  <p>В динамическом массиве число элементов неизвестно на этапе компиляции, а определяется во время выполнения программы. Поэтому и память под массив выделяется во время выполнения программы.</p>
+  <p>Создадим статический массив на 100 элементов типа int</p>
+  <code>int B[100];</code>
+  <p>Размер статического массива указан в тексте программы и известен до ее компиляции. Поэтому память под массив выделяется во время компиляции программы и во время выполнения размер массива не изменяется.</p>
+
+  <h4>Многомерный массив</h4>
+  <p>Создадим статический двумерный массив на 100 элементов, каждый из которых содержит еще 100 элементов.</p>
+  <code>int A[100][100];</code>
+  <p>Для обращения к элементу двумерного массива нужно после имени массива указать два индекса</p>
+  <code>A[i][j] = 15;</code>
+  <p>Массивы больше чем двумерные не используют в спортивном программировании, потому что они занимают слишком много памяти.</p>
+  <p>Создание и инициализация массива, например, нулями потребляет время и память. Поэтому ограничение на максимальный размер массива накладывается способностью создать массив, например за 1 секунду. За одну секунду можно создать массив из 10⁶ элементов. Если это массив целых чисел, которые занимают по 4 байта, то такой массив займет 4 мегабайта памяти.</p>
+
+  <h4>Преобразования типов данных</h4>
+  <p>Разделяют два способа преобразования типов данных : явный и неявный. Если мы выполняем математическую операцию с переменными разных типов данных, то они сначала приводятся к одному типу данных, затем с ними выполняется математическая операция. Компьютер может выполнять математические операции только с переменными одинакового типа.</p>
+
+  <h4>Неявное преобразование</h4>
+  <p>При делении двух целых чисел происходит целочисленное деление, которое возвращает целое число</p>
+  <code>int a = 33 / 5; // a = 6</code>
+  <p>Если одно из цедых чисел умножить на вещественное, то произойдет неявное преобразование целого числа к вещественному. Дальше при делении произойдет неявное преобразование второго целого числа к вещественному. При делении двух вещественных чисел происходит обычное деление, которое возвращает вещественное число</p>
+  <code>double a = (1.0 * 33) / 5; // a = 6.6</code>
+  <p>При неявном преобразовании мы не прописываем тип данных, в который нужно преобразовать.</p>
+
+  <h4>Явное преобразование</h4>
+  <p>Мы сами преобразовываем одно из целых чисел в вещественное явным способом через оператор double</p>
+  <code>double a = double(33) / 5; // a = 6.6</code>
+  <p>При явном преобразовании мы прописываем тип данных, в который нужно преобразовать.</p>
 </article>
 
 
@@ -254,7 +357,31 @@ int main() {
   long long tilesM = (m + a - 1) / a;
 
   // вывод результата
-  cout &lt;&lt; tilesN + tilesM;
+  cout &lt;&lt; tilesN * tilesM;
+}
+</pre>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  long long n, m, a;
+  cin >> n >> m >> a;
+
+  // решение
+  long long h1 = n / a;
+  long long h2 = m / a;
+  if (n / a != 0) {
+    h1++;
+  }
+  if (m % a != 0) {
+    h2++;
+  }
+
+  // вывод результата
+  cout &lt;&lt; h1 * h2;
 }
 </pre>
   </details>
