--- a/src/components/alg/alg-conspect/yargu2/pages/elem-sp3.html
+++ b/src/components/alg/alg-conspect/yargu2/pages/elem-sp3.html
@@ -47,6 +47,23 @@
   <div class="anchor" id="p1"></div>
   <h3>Основы C++ 3. string</h3>
 
+  <p>Подключим библиотеку</p>
+  <code>#include &lt;string&gt;</code>
+
+  <p>Создадим две строки</p>
+  <code>string s1 = "abb";</code>
+  <code>string s2 = "abc";</code>
+  <p>Строки можно сравнить между собой</p>
+  <code>"abc" > "abb";</code>
+  <code>"123" &lt; "12";</code>
+
+  <p>Строки можно объединять</p>
+  <code>string s3 = s1 + s2;</code>
+  <code>"abc" + "123"; // "abc123"</code>
+
+  <p><strong>Подстрока</strong> это любое количество соседних символов строки. <strong>Префикс</strong> это подстрока, содержащая первый символ. <strong>Суффикс</strong> это подстрока , содержащая последний символ. <strong>Палиндром</strong> - это строка, которая имеет одинаковые символы если ее читать с начала и с конца.</p>
+  <p>Обращаться к отдельным символам в строке можно как к элементам массива</p>
+  <code>char c = str1[0]; // вернет первый символ строки</code>
 </article>
 
 
