--- a/src/components/alg/alg-conspect/yargu2/pages/elem-sp6.html
+++ b/src/components/alg/alg-conspect/yargu2/pages/elem-sp6.html
@@ -18,7 +18,8 @@
   <h2>Содержание</h2>
 
   <p>
-    <a href="#p1">Базовые алгоритмы 1. Префикс функции</a>
+        <a href="#p1">Базовые алгоритмы 1. Префикс функции</a>
+    <br><a href="#t1">Задача 1. Массовое обновление элементов</a>
   </p>
   <p>
         <a href="#task1">Задача A. Трудная задача</a>
@@ -44,6 +45,42 @@
   <div class="anchor" id="p1"></div>
   <h3>Базовые алгоритмы 1. Префикс функции</h3>
 
+  <p>Мы знаем одномерную префикс-сумму, двумерную префикс-сумму. Рассмотрим теперь задачу массового обновления элементов.</p>
+  <p>Еще есть задача по имеющейся префикс функции найти исходный массив. Например, дан массив с префикс-суммой B, найти исходный массив A. Тогда каждый элемент массива A равен</p>
+  <code>A[i] = B[i] - B[i - 1];</code>
+</article>
+
+
+<!-- Задача 1. Массовое обновление элементов -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>Задача 1. Массовое обновление элементов</h3>
+
+  <p>Пусть у нас есть элементы от a₁ до aₙ в массиве A.</p>
+  <code>A = {a₁ , a₂ , a₃ , a₄ , ... , aₙ}</code>
+  <p>Нам необходимо делать массовое обновление от элемента с номером l до элемента с номером r. Например прибавить к этим элементам значение h. Заведем массив C.</p>
+  <code>C = {c₁ , c₂ , c₃ , c₄ , ... , cₙ}</code>
+  <p>Если в ячейку cᵢ прибавить значение h, то начиная с ячейки номер i и до бесконечности все элементы мы увеличиваем на значение h. В одной ячейке мы храним все массивые обновления начиная с нее и до конца массива.</p>
+  <code>cᵢ += h;</code>
+  <p>Если нужно изменить значение не до конца, а до какого то элемента r, то операция cᵢ += h увеличит значение на нужном отрезке от i до r и на не нужном отрезке от r и до конца массива. Теперь чтобы вернуть значения на не нужном отрезке надо у элемента r+1 сделать обратную операцию, то есть вычесть значение h.</p>
+  <code>c<sub>r+1</sub> -= h.</code>
+  <p>Теперь если у нас есть q операций для изменения массива на отрезке.Мы можем сразу сделать все операции.</p>
+<pre>
+for (int i = 0; i &lt; q; i++) {
+  cin >> l >> r;
+  r++;
+  cin >> h;
+  C[l] += h;
+  C[r] -= h;
+}
+</pre>
+  <p>После q запросов мы сразу получим все наши обновления в одном массиве C. И мы сразу можем применить все обновления к нашему вектору A. В результате получим вектор B в котором будет ответ на нашу задачу.</p>
+<pre>
+for (int i = 1; i &lt;= n; i++) {
+  C[i] += C[i-1];
+  B[i] = A[i] + C[i];
+}
+</pre>
 </article>
 
 
@@ -1282,11 +1319,11 @@ int main() {
   <p>Для каждого из заданных квестов определите минимальное количество урона от падения, которое вы можете получить, выполняя этот квест.</p>
 
   <h4>Входные данные</h4>
-  <p>Первая строка входных данных содержит два целых числа n и m (2≤n≤10<sup>5</sup>;1≤m≤10<sup>5</sup>) — количество столбцов в мире и количество квестов, которые вам надо протестировать, соответственно.</p>
+  <p>Первая строка входных данных содержит два целых числа n и m (2 ≤ n ≤ 10<sup>5</sup>; 1 ≤ m ≤ 10<sup>5</sup>) — количество столбцов в мире и количество квестов, которые вам надо протестировать, соответственно.</p>
 
-  <p>Вторая строка входных данных содержит n целых чисел a<sub>1</sub>,a<sub>2</sub>,…,a<sub>n</sub> (1≤a<sub>i</sub>≤10<sup>9</sup>), где a<sub>i</sub> равно высоте i-го столбца мира.</p>
+  <p>Вторая строка входных данных содержит n целых чисел a<sub>1</sub>, a<sub>2</sub>, …, a<sub>n</sub> (1 ≤ a<sub>i</sub> ≤ 10<sup>9</sup>), где a<sub>i</sub> равно высоте i-го столбца мира.</p>
 
-  <p>Следующие m строк описывают квесты. В j-й из них содержатся два целых числа s<sub>j</sub> и t<sub>j</sub> (1≤s<sub>j</sub>,t<sub>j</sub>≤n;s<sub>j</sub>≠t<sub>j</sub>), которые значат, что вам необходимо переместиться из столбца s<sub>j</sub> в столбец tj в течение j-го квеста.</p>
+  <p>Следующие m строк описывают квесты. В j-й из них содержатся два целых числа s<sub>j</sub> и t<sub>j</sub> (1 ≤ s<sub>j</sub>, t<sub>j</sub> ≤ n; s<sub>j</sub> ≠ t<sub>j</sub>), которые значат, что вам необходимо переместиться из столбца s<sub>j</sub> в столбец tj в течение j-го квеста.</p>
 
   <p>Заметьте, что s<sub>j</sub> может быть больше, чем t<sub>j</sub>.</p>
 
@@ -1324,7 +1361,8 @@ using namespace std;
 
 int main() {
   // ввод данных
-  int n, m;
+  int n; // число столбцов
+  int m; // число запросов
   cin >> n >> m;
   vector&lt;long long&gt; A(n + 2), B(n + 2), C(n + 2);
   for (int i = 1; i &lt;= n; i++) {
@@ -1332,19 +1370,27 @@ int main() {
   }
 
   // решение
+
+  // соберем префикс-сумму слева-направо
   for (int i = 2; i &lt;= n; i++) {
     B[i] = B[i - 1];
     if (A[i] &lt; A[i - 1]) {
+      // полет вниз (падение)
       B[i] += A[i - 1] - A[i];
     }
   }
+
+  // соберем префикс-сумму справа-налево
   for (int i = n - 1; i >= 0; i--) {
     C[i] = C[i + 1];
     if (A[i] &lt; A[i + 1]) {
       C[i] += A[i + 1] - A[i];
     }
   }
+
+  // для каждого запроса посчитаем и выведем результат
   for (int i = 0; i &lt; m; i++) {
+    // следующий запрос
     int l, r;
     cin >> l >> r;
 
