--- a/src/components/alg/alg-conspect/yargu2/pages/elem-sp7.html
+++ b/src/components/alg/alg-conspect/yargu2/pages/elem-sp7.html
@@ -48,6 +48,7 @@
   <div class="anchor" id="p1"></div>
   <h3>Базовые алгоритмы 2. Два указателя</h3>
 
+  <p>Дан массив длины n. Надо найти максимальную сумму на отрезке длины k. Здесь используется метод двух указателей, которые образуют окно. Одновременно двигаем левый и правый указатель вправо.</p>
 </article>
 
 
@@ -284,9 +285,9 @@ int main() {
   <p>Ваша задача — найти максимально возможное количество студентов в сбалансированной команде.</p>
 
   <h4>Входные данные</h4>
-  <p>Первая строка входных данных содержит одно целое число n (1≤n≤2⋅10<sup>5</sup>) — количество студентов.</p>
+  <p>Первая строка входных данных содержит одно целое число n (1 ≤ n ≤ 2⋅10<sup>5</sup>) — количество студентов.</p>
 
-  <p>Вторая строка входных данных содержит n целых чисел a<sub>1</sub>,a<sub>2</sub>,…,a<sub>n</sub> (1≤a<sub>i</sub>≤10<sup>9</sup>), где a<sub>i</sub> означает умение i-го студента программировать.</p>
+  <p>Вторая строка входных данных содержит n целых чисел a<sub>1</sub>, a<sub>2</sub>, …, a<sub>n</sub> (1 ≤ a<sub>i</sub> ≤ 10<sup>9</sup>), где a<sub>i</sub> означает умение i-го студента программировать.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — максимально возможное количество студентов в сбалансированной команде.</p>
@@ -560,23 +561,25 @@ int main() {
   <p>Пусть сумма элементов первой части равна sum<sub>1</sub>, сумма элементов второй части равна sum<sub>2</sub> и сумма элементов третьей части равна sum<sub>3</sub>. Среди всех возможных разбиений массива вам нужно выбрать такое, что sum<sub>1</sub>=sum<sub>3</sub> и sum<sub>1</sub> является максимально возможной.</p>
 
   <p>Более формально, если первая часть массива содержит a элементов, вторая часть массива содержит b элементов и третья часть массива содержит c элементов, тогда:</p>
-  <code>sum<sub>1</sub>=∑d<sub>i</sub> (1≤i≤a),</code>
-  <code>sum<sub>2</sub>=∑d<sub>i</sub> (a+1≤i≤a+b),</code>
-  <code>sum<sub>3</sub>=∑d<sub>i</sub> (a+b+1≤i≤a+b+c).</code>
+  <code>sum<sub>1</sub> = ∑d<sub>i</sub> (1 ≤ i ≤ a),</code>
+  <code>sum<sub>2</sub> = ∑d<sub>i</sub> (a+1 ≤ i ≤ a+b),</code>
+  <code>sum<sub>3</sub> = ∑d<sub>i</sub> (a+b+1 ≤ i ≤ a+b+c).</code>
   <p>Сумма пустого массива равна 0.</p>
 
   <p>Ваша задача найти такое разбиение массива, что sum<sub>1</sub>=sum<sub>3</sub> и sum<sub>1</sub> является максимально возможной.</p>
 
   <h4>Входные данные</h4>
-  <p>Первая строка входных данных содержит одно целое число n  (1≤n≤2⋅10<sup>5</sup>) — количество элементов массива d.</p>
+  <p>Первая строка входных данных содержит одно целое число n  (1 ≤ n ≤ 2⋅10<sup>5</sup>) — количество элементов массива d.</p>
 
-  <p>Вторая строка входных данных содержит n целых чисел d<sub>1</sub>,d<sub>2</sub>,…,d<sub>n</sub> (1≤d<sub>i</sub>≤10<sup>9</sup>) — элементы массива d.</p>
+  <p>Вторая строка входных данных содержит n целых чисел d<sub>1</sub>, d<sub>2</sub>, …, d<sub>n</sub> (1 ≤ d<sub>i</sub> ≤ 10<sup>9</sup>) — элементы массива d.</p>
 
   <h4>Выходные данные</h4>
-  <p>Выведите одно целое число — максимально возможное значение sum<sub>1</sub>, удовлетворяющее условию sum<sub>1</sub>=sum<sub>3</sub>.</p>
+  <p>Выведите одно целое число — максимально возможное значение sum<sub>1</sub>, удовлетворяющее условию sum<sub>1</sub> = sum<sub>3</sub>.</p>
 
   <p>Очевидно, всегда существует хотя бы один способ разбить массив нужным образом (если a=c=0 и b=n).</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 5
@@ -600,12 +603,11 @@ int main() {
 </pre>
   <code>0</code>
   <p>В третьем тестовом примере есть только один способ разделить массив: [ ],[4,1,2],[ ].</p>
-
-  <h4>Решение</h4>
-  <p>Создадим два дополнительных массива B и C для префикс-функций, B слева направо, C справа налево. Будем идти двумя указателями с двух сторон пока они не пересекутся или пока не найдем элементы на которых сумма элементов справа будет равна сумме элементов слева.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
+    <p>Создадим два дополнительных массива B и C для префикс-функций, B слева направо, C справа налево. Будем идти двумя указателями с двух сторон пока они не пересекутся или пока не найдем элементы на которых сумма элементов справа будет равна сумме элементов слева.</p>
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
@@ -631,8 +633,10 @@ int main() {
   for (int i = n; i >= 1; i--) {
     C[i] = C[i + 1] + A[i];
   }
+
   int r = n + 1; // правый указатель
   long long res = 0;
+
   for (int l = 0; l &lt; r; l++) {
     while (B[l] > C[r]) {
       r--;
