--- a/src/components/alg/alg-conspect/yargu3/pages/elem-250511-Nvsb2018.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-250511-Nvsb2018.html
@@ -6,7 +6,7 @@
 
 
 <article class="article">
-  <h1>Контест 2018 Личное первенство Новосибирска</h1>
+  <h1>Личное первенство Новосибирска 2018</h1>
   <p><a href="https://codeforces.com/group/CkAC2YcRrZ/contest/609334" target="_blank">Codeforces Контест 609334 2025-05-11</a></p>
 </article>
 
