--- a/src/components/alg/alg-pract/codeforces/pages/elem-140112-Round223.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-140112-Round223.html
@@ -35,6 +35,8 @@
   <h4>Выходные данные</h4>
   <p>Выведите в единственной строке два целых числа. Первое число — это количество очков у Сережи в конце игры, второе — количество очков у Димы в конце игры.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 4
@@ -49,6 +51,7 @@
 1 2 3 4 5 6 7
 </pre>
   <code>16 12</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -134,6 +137,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В первой строке выведите количество карточек, которое удастся выложить на стол. Во второй строке выведите саму лесенку, которая получится.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 5
@@ -153,6 +158,7 @@ int main() {
 5
 1 2 3 2 1
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -238,7 +244,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите интересующие Сережу элементы в порядке, в котором их номера следуют во входных данных.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 1 1
@@ -251,6 +258,7 @@ int main() {
 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
 </pre>
   <code>1 2 1 2 3 1 2 1 2 3 1 2 1 2 3 4</code>
+  </details>
 </article>
 
 
@@ -303,7 +311,8 @@ for(level = 1; level &lt; n; level = level + 1){
   <h4>Выходные данные</h4>
   <p>Для каждой операции второго типа выведите ответ в отдельной строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4 5
 1 4 4 7 1
@@ -317,6 +326,7 @@ for(level = 1; level &lt; n; level = level + 1){
 0
 1
 </pre>
+  </details>
 </article>
 
 
@@ -340,7 +350,8 @@ for(level = 1; level &lt; n; level = level + 1){
   <h4>Выходные данные</h4>
   <p>Выведите ответ на каждый запрос в отдельной строке. Ответы выводите в порядке следования запросов во входных данных.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 ())(())(())(
 7
@@ -366,5 +377,6 @@ for(level = 1; level &lt; n; level = level + 1){
   <p>Правильной скобочной последовательностью называется скобочная последовательность, которую можно преобразовать в корректное арифметическое выражение путем вставок между ее символами символов «1» и «+». Например, скобочные последовательности «()()», «(())» — правильные (полученные выражения: «(1)+(1)», «((1+1)+1)»), а «)(» и «(» — нет.</p>
   <p>Для третьего запроса искомая последовательность будет «()».</p>
   <p>Для четвертого запроса искомая последовательность будет «()(())(())».</p>
+  </details>
 </article>
 
