--- a/src/components/alg/alg-pract/codeforces/pages/elem-150302-Round295.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-150302-Round295.html
@@ -35,6 +35,8 @@
   <h4>Выходные данные</h4>
   <p>Выведите «YES», если строка является панграммой, и «NO» в противном случае.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 12
@@ -48,6 +50,7 @@ toosmallword
 TheQuickBrownFoxJumpsOverTheLazyDog
 </pre>
   <code>YES</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -110,16 +113,19 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число — минимальное количество нажатий на кнопки, необходимое, чтобы получить число m из числа n.</p>
 
-  <h4>Пример 1</h4>
-  <code>4 6</code>
-  <code>2</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>4 6</code>
+    <code>2</code>
 
-  <h4>Пример 2</h4>
-  <code>10 1</code>
-  <code>9</code>
+    <h4>Пример 2</h4>
+    <code>10 1</code>
+    <code>9</code>
 
-  <p>В первом примере нужно один раз нажать на синюю кнопку, и затем раз один раз на красную кнопку.</p>
-  <p>Во втором примере удваивать число невыгодно, поэтому надо девять раз нажать на синюю кнопку.</p>
+    <p>В первом примере нужно один раз нажать на синюю кнопку, и затем раз один раз на красную кнопку.</p>
+    <p>Во втором примере удваивать число невыгодно, поэтому надо девять раз нажать на синюю кнопку.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -188,6 +194,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число — ответ по модулю 10⁹ + 7.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 1
@@ -215,6 +223,7 @@ TTT
   <p>Во втором примере ρ("AG", "AG") = ρ("AG", "GA") = ρ("AG", "AA") = ρ("AG", "GG") = 4.</p>
 
   <p>В третьем примере ρ("TTT", "TTT") = 27.</p>
+  </details>
 </article>
 
 
@@ -244,6 +253,8 @@ TTT
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите ответ на задачу.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3
@@ -263,6 +274,7 @@ TTT
 0 4
 </pre>
   <code>2930</code>
+  </details>
 </article>
 
 
@@ -286,6 +298,8 @@ TTT
   <h4>Выходные данные</h4>
   <p>Выведите ответ на задачу по модулю 10⁹ + 7.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3 1
@@ -301,5 +315,6 @@ TTT
   <code>9</code>
   <p>В первом примере результат равен (1 + 08) + (10 + 8) = 27.</p>
   <p>Во втором примере результат равен 1 + 0 + 8 = 9.</p>
+  </details>
 </article>
 
