--- a/src/components/alg/alg-pract/codeforces/pages/elem-220206-Round770.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-220206-Round770.html
@@ -48,7 +48,8 @@
 
   <p>Можно показать, что при данных ограничениях ответ не превосходит 10⁹.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 3 2
@@ -68,6 +69,8 @@ ab
 </pre>
   <p>Рассмотрим первый набор входных данных:</p>
   <p>После первой операции строка s может стать либо aabbaa, либо baaaab. После второй операции s может принимать только такие 2 значения: aabbaaaabbaa и baaaabbaaaab.</p>
+  </details>
+
   <details>
     <summary>Решение</summary>
 <pre>
@@ -153,7 +156,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите «Alice» или «Bob» (без кавычек) — кто из друзей мог получить из своего начального числа число y.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 1 7 9
@@ -174,6 +178,7 @@ Alice
   <p>В первом наборе входных данных Алиса могла получить 9 с помощью следующих операций: 7+2=9.</p>
   <p>Во втором наборе Алиса могла получить 2 с помощью таких операций: (0+1)⊕3=2.</p>
   <p>В третьем наборе Боб изначально имел число x+3=0+3=3. Тогда он мог получить 1 таким образом: (((3+1)+2)⊕3)⊕4=1.</p>
+  </details>
 </article>
 
 
@@ -213,7 +218,8 @@ Alice
 
   <p>Если ответа не существует, то выведите единственное слово «NO» в отдельной строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 1 1
@@ -233,6 +239,7 @@ YES
 2
 3
 </pre>
+  </details>
 </article>
 
 
@@ -293,7 +300,8 @@ YES
 
   <p>Сумма n по всем наборам не должна превосходить 3000.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 1
 
@@ -321,6 +329,7 @@ YES
 ! 2 3
 </pre>
   <p>Массив из теста из примера: [1,2,0,3].</p>
+  </details>
 </article>
 
 
@@ -357,7 +366,8 @@ YES
 
   <p>Если ответа не существует, в единственной строке выведите «NO».</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 2
@@ -376,6 +386,7 @@ RLLRRL
   <p>В первом массиве первый элемент мы добавляем в R, а второй в L. Сейчас L={2}, а R={1}.</p>
   <p>Во втором массиве первый и третий элемент мы добавляем в L, а остальные в R. Сейчас L={1,2,3} и R={1,2,3}.</p>
   <p>В третьем массиве элементы 2, 3 и 6 мы добавляем в L, а на остальных — в R. В итоге L=R={1,1,2,2,3,3}.</p>
+  </details>
 </article>
 
 
@@ -405,6 +416,8 @@ RLLRRL
   <h4>Выходные данные</h4>
   <p>После каждой операции выведите «YES» (без кавычек), если массивы равны, и «NO» иначе. Ответ можно выводить в любом регистре.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3 5 3
@@ -447,5 +460,6 @@ YES
     <li>После операции «B 2 2»: A=[1,1,2], B=[1,1,0].</li>
     <li>После операции «A 3 3»: A=[1,1,0], B=[1,1,0].</li>
   </ul>
+  </details>
 </article>
 
