--- a/src/components/alg/alg-pract/codeforces/pages/elem-220417-Round784.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-220417-Round784.html
@@ -46,7 +46,9 @@
   <p>Для каждого набора входных данных выведите единственную строку, содержащую дивизион в формате «Division X», где X
   — целое число от 1 до 4, представляющее дивизион для соответствующего рейтинга.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
+  <h4></h4>
 <pre>
 7
 -789
@@ -73,6 +75,7 @@ Division 1
   <p>Для шестого набора соответствующий рейтинг составляет 1679, поэтому он находится в дивизионе 2.</p>
 
   <p>Для седьмого набора соответствующий рейтинг составляет 2300, поэтому он находится в дивизионе 1.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -137,6 +140,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите любое целое число, которое встречается в массиве хотя бы три раза, или -1, если такого числа нет.</p>
 
+  <details>
+    <summary></summary>
   <h4>Пример</h4>
 <pre>
 7
@@ -170,6 +175,7 @@ int main() {
   <p>В четвертом наборе входных данных 4 встречается три раза, поэтому 4 — ответ.</p>
   <p>В пятом наборе входных данных каждое из чисел 1, 2 и 3 встречается хотя бы три раза, поэтому любое из них может быть ответом.</p>
   <p>В шестом наборе входных данных все элементы массива различны, поэтому ни одно число не встречается хотя бы три раза, и ответ равен -1.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -248,7 +254,9 @@ int main() {
 
   <p>Вы можете выводить ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
+  <h4></h4>
 <pre>
 4
 3
@@ -270,6 +278,7 @@ YES
   <p>Во втором примере можно показать, что после любого количества операций мы не сможем привести все элементы к одной чётности, так что ответ «NO».</p>
   <p>В третьем примере все элементы уже одной чётности и ответ «YES».</p>
   <p>В четвёртом примере мы можем применить одну операцию и увеличить элементы на нечётных позициях на 1, после чего получим массив [1001,1,1001,1,1001], все элементы которого нечётные, так что ответ «YES».</p>
+  </details>
 </article>
 
 
@@ -303,7 +312,8 @@ YES
 
   <p>Вы можете выводить ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 12
 5
@@ -350,6 +360,7 @@ RBWBW
   <p>В пятом примере можно поркасить следующим образом: WWW→WRB–––→BR–––B.</p>
   <p>В шестом примере можно поркасить следующим образом: WWW→WRB–––→RB–––B.</p>
   <p>В седьмом примере печать не нужно использовать вовсе.</p>
+  </details>
 </article>
 
 
@@ -383,7 +394,8 @@ RBWBW
 
   <p>Пожалуйста, обратите внимание, что ответ для некоторых тестовых примеров не будет помещаться в 32-разрядный целочисленный тип, поэтому вы должны использовать по крайней мере 64-разрядный целочисленный тип в вашем языке программирования (например, long long для C++).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 6
@@ -422,6 +434,7 @@ jk
   <p>В первом примере ровно в одной позиции различаются следующие пары: («ab», «cb»), («ab», «db»), («ab», «aa»), («cb», «db») and («cb», «cc»).</p>
   <p>Во втором примере ровно в одной позиции различаются следующие пары: («aa», «ac»), («aa», «ca»), («cc», «ac»), («cc», «ca»), («ac», «aa») and («ca», «aa»).</p>
   <p>В третьем примере нет пар, удовлетворяющих условиям.</p>
+  </details>
 </article>
 
 
@@ -455,7 +468,8 @@ jk
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите единственное число — максимальное количество, которое могут съесть Алиса и Боб, соблюдая условие.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 3
@@ -480,6 +494,7 @@ jk
   <p>В третьем примере Алиса и Боб не могут съесть наборы конфет одинакового ненулевого веса, поэтому ответ равен 0.</p>
 
   <p>В четвертом примере Алиса съест конфеты весом [7,3,20], а Боб съест конфеты весом [10,8,11,1], каждый из них съест набор конфет суммарным весом 30. Лучшего способа съесть конфеты нет, поэтому ответ 7.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -574,7 +589,8 @@ int main() {
 
   <p>Не обязательно выводить новую строку после каждого набора входных данных; в примерах из условия она выводится для наглядности.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 6 10
@@ -611,6 +627,7 @@ int main() {
 *****
 *****
 </pre>
+  </details>
 </article>
 
 
@@ -643,7 +660,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите единственную строку, содержащую максимально возможное AND значение a1 AND a2 AND … AND an после выполнения не более чем k операций.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 3 2
@@ -663,4 +681,5 @@ int main() {
 </pre>
   <p>Для первого набора мы можем установить бит 1 (2¹) последних 2-х элементов с помощью 2-х операций, получив таким образом массив [2, 3, 3], значение AND которого равно 2.</p>
   <p>Для второго набора мы не можем выполнить никаких операций, поэтому ответом будет только AND всего массива, равное 4.</p>
+  </details>
 </article>
