--- a/src/components/alg/alg-pract/codeforces/pages/elem-220510-Round790.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-220510-Round790.html
@@ -42,7 +42,8 @@
   </ul>
   <p>Вы можете выводить YES и NO в любом регистре (например, строки yEs, yes, Yes и YES будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 213132
@@ -63,6 +64,7 @@ NO
   <p>Во втором наборе входных данных примера сумма первых трёх цифр равна 9+7+3=19, сумма последних трёх цифр равна 8+9+4=21. Суммы не равны. Следовательно, ответ равен «NO».</p>
 
   <p>В третьем наборе входных данных примера сумма первых трёх цифр равна 0+4+5=9, сумма последних трёх цифр равна 2+0+7=9. Суммы равны. Следовательно, ответ равен «YES».</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -142,7 +144,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите единственное целое число — минимальное количество конфет, которые вам нужно съесть, чтобы выполнить требования.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 5
@@ -165,6 +168,7 @@ int main() {
 </pre>
   <p>В первом наборе вы можете съесть 1 конфету из второй коробки, 2 конфеты из третьей коробки, 3 конфеты из четвертой коробки и 4 конфеты из пятой коробки. Теперь распределение конфет по коробкам выглядит так: [1,1,1,1,1]. Вы съели всего 0+1+2+3+4=10 конфет, поэтому ответ равен 10.</p>
   <p>Лучший ответ для второго набора получается, если уменьшить количество конфет во всех коробках до 5. Так, вы съедите 995+995+0+995+995+995=4975 конфет.</p>
+  </details>
 </article>
 
 
@@ -197,7 +201,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — минимальную разница среди всех возможных пар заданных строк.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 2 4
@@ -236,6 +241,7 @@ y
   <p>Для второго набора входных данных можно показать, что наилучшей парой является («abb», «bef»), которая имеет разницу, равную 8, что можно получить следующим образом: заменить первый символ первой строки на 'b' за один ход, заменить второй символ второй строки на 'b' за 3 хода и заменить третий символ второй строки на 'b' за 4 хода, что в сумме дает 1+3+4=8 ходов.</p>
   <p>В третьем наборе существует только одна возможная пара, и можно показать, что минимальное количество ходов, необходимое для того, чтобы строки стали равными, равно 35.</p>
   <p>В четвертом наборе есть пара строк, которые уже равны, поэтому ответ равен 0.</p>
+  </details>
 </article>
 
 
@@ -259,7 +265,8 @@ y
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — максимальную сумму по всем возможным размещениям слона.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 4 4
@@ -285,6 +292,7 @@ y
 5
 3
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -394,7 +402,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите q строк. В j-й строке выведите количество конфет, которое нужно съесть Тимуру, чтобы получить количество сахара, большее или равное x<sub>j</sub>. Выведите -1, если получить такое количество невозможно.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 8 7
@@ -438,6 +447,7 @@ int main() {
   <ul>
     <li>Для единственного запроса второго набора входных данных мы можем выбрать третью конфету, из которой Тимур получает количество сахара равное 3. Также можно получить тот же ответ, выбрав четвертую конфету.</li>
   </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -549,7 +559,8 @@ int main() {
 
   <p>Если ответов может быть несколько, выведите любой.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 7 2
@@ -567,6 +578,7 @@ int main() {
 -1
 1 4
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -674,7 +686,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — количество сбалансированных поддеревьев.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 7
@@ -695,6 +708,7 @@ BWBWBWBW
   <p>Первый пример изображён в условии. Только поддеревья вершин 2 и 3 сбалансированны.</p>
   <p>Во втором примере только поддерево вершины 1 сбалансированно.</p>
   <p>в третьем примере сбалансированны поддеревья вершин 1, 3, 5 и 7.</p>
+  </details>
 </article>
 
 
@@ -721,7 +735,8 @@ BWBWBWBW
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите единственное целое число — максимальное количество пересечений, при оптимальном расположении проводов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 7
@@ -742,6 +757,7 @@ BWBWBWBW
   <p>Первый пример показан на втором рисунке в условии.</p>
   <p>Во втором примере при единственно возможном соединении появляется пересечение двух проводов, поэтому ответ равен 1.</p>
   <p>В третьем тестовом примере единственно возможное соединение состоит из одного провода, поэтому ответ равен 0.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -885,7 +901,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите единственное целое число — максимальное количество пересечений, при оптимальном расположении проводов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 7
@@ -906,4 +923,5 @@ int main() {
   <p>Первый пример показан на втором рисунке в условии.</p>
   <p>Во втором примере при единственно возможном соединении появляется пересечение двух проводов, поэтому ответ равен 1.</p>
   <p>В третьем тестовом примере единственно возможное соединение состоит из одного провода, поэтому ответ равен 0.</p>
+  </details>
 </article>
