--- a/src/components/alg/alg-pract/codeforces/pages/elem-220712-Round806.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-220712-Round806.html
@@ -37,7 +37,8 @@
 
   <p>Вы можете выводить «Yes» и «No» в любом регистре (например, строки «yES», «yes» и «Yes» будут распознаны как правильный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10
 YES
@@ -64,6 +65,7 @@ NO
 NO
 </pre>
   <p>Первые пять наборов входных данных содержат строки «YES», «yES», «yes», «Yes», «YeS». Все они равны строке «YES», где каждый символ либо заглавный, либо строчный.</p>
+  </details>
 </article>
 
 
@@ -94,7 +96,8 @@ NO
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — суммарное количество шариков, полученных командами за время соревнования.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 3
@@ -126,6 +129,7 @@ CODEFORCES
     <li>Была решена задача A. Решившая её команда получила 1 шар за решение задачи. Обратите внимание, что эта команда не получила дополнительный шарик, так как она не является первой командой, решившей задачу A.</li>
   </ul>
   <p>Суммарно команды получили 2+2+1=5 шариков.Во втором наборе входных данных была решена только одна задача. Решившая её команда получила 2 шара: один за решение задачи, второй за то, что она решила задачу A первой.</p>
+  </details>
 </article>
 
 
@@ -156,7 +160,8 @@ CODEFORCES
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите n разделённых пробелом цифр  — изначальные значения на колёсиках шифра.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 3
@@ -188,6 +193,7 @@ CODEFORCES
     <li>Третье колёсико: 1→D0→U1.</li>
   </ul>
   <p>Получившаяся последовательность [9,3,1] совпадает с заданной во входных данных.</p>
+  </details>
 </article>
 
 
@@ -217,7 +223,8 @@ CODEFORCES
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите бинарную строку длины n. i-й бит строки должен равняться 1 если существуют две строки sj и sk таких, чтобы si=sj+sk, или же 0 в противном случае. Обратите внимание, что j может совпадать с k.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 5
@@ -254,6 +261,7 @@ code
     <li>s5 не может быть представлена как конкатенация никаких двух строк.</li>
   </ul>
   <p>Так как только s1 и s3 удовлетворяют условиям, то только первый и третий биты в ответе будут равняться 1, поэтому ответ — 10100.</p>
+  </details>
 </article>
 
 
@@ -283,7 +291,8 @@ code
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — минимальное количество операций необходимое чтобы получить квадратную матрицу, которая не меняется при поворотах на 0°, 90°, 180° и 270°.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3
@@ -326,6 +335,7 @@ code
 </pre>
   <p>Теперь, любой поворот не меняет данную матрицу.</p>
   <p>Во втором наборе входных данных, нет необходимости применять ни одной операции, любые допустимые повороты и так не меняют её.</p>
+  </details>
 </article>
 
 
@@ -353,7 +363,8 @@ code
 
   <p>Пожалуйста, обратите внимание, что ответ для некоторых тестовых примеров может не поместиться в 32-разрядный целочисленный тип, поэтому вы должны использовать по крайней мере 64-разрядный целочисленный тип в вашем языке программирования (например, long long для C++).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 8
@@ -380,6 +391,7 @@ code
     <li>Пара (2,8) подходит, потому что a2=1, a8=4 и 1 &lt; 2 &lt; 4 &lt; 8.</li>
     <li>Пара (3,8) подходит, потому что a3=2, a8=4 и 2 &lt; 3 &lt; 4 &lt; 8.</li>
   </ul>
+  </details>
 </article>
 
 
@@ -419,7 +431,8 @@ code
 
   <p>Пожалуйста, обратите внимание, что ответ для некоторых наборов входных данных может не поместиться в 32-разрядный целочисленный тип, поэтому вы должны использовать по крайней мере 64-разрядный целочисленный тип в вашем языке программирования (например, long long для C++).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 4 5
@@ -448,4 +461,5 @@ code
     <li>Использовать плохой ключ, и открыть им сундук 4. В результате использования плохого ключа, количество монет в сундуке 4 станет ⌊0/2⌋=0. Ваш баланс станет 11+0=11.</li>
   </ul>
   <p>После открытия всех сундуков, у вас останется 11 монет. Можно доказать, что получить больше монет невозможно.</p>
+  </details>
 </article>
