--- a/src/components/alg/alg-pract/codeforces/pages/elem-220830-Round817.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-220830-Round817.html
@@ -41,7 +41,8 @@
 
   <p>Вы можете выводить ответ в любом регистре (например, вывод «yEs», «yes», «Yes» и «YES» всё ещё будет считаться корректным).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10
 5
@@ -77,6 +78,7 @@ NO
 NO
 NO
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -144,7 +146,8 @@ int main() {
 
   <p>Вы можете выводить ответ в любом регистре (например, вывод «yEs», «yes», «Yes» и «YES» всё ещё будет считаться корректным).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 2
@@ -177,6 +180,7 @@ YES
   <p>В первом наборе входных данных примера Вася видит вторую клетку каждой строки одинаково, потому что вторая клетка первой строки зеленая, а вторая клетка второй строки синяя, эти два цвета он не различает. Остальные же клетки имеют одинаковый цвет. Таким образом, Вася видит эти строки одинаковыми.</p>
   <p>Во втором наборе входных данных примера Вася видит две строки различными.</p>
   <p>В третьем наборе входных данных каждый символ поля либо зелёный, либо синий. Таким образом, Вася видит строки одинаково.</p>
+  </details>
 
    <details>
     <summary>Решение</summary>
@@ -251,7 +255,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите через пробел три целых числа — количество очков у первого, второго и третьего из друзей. Выводите очки именно в таком порядке — i-м выводите количество очков у i-го из друзей.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 1
@@ -272,6 +277,7 @@ bac roc lly iol iat
 2 2 6
 9 11 5
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -389,7 +395,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите n целых чисел — для всех k от 1 до n выведите максимальное значение ряда, если можно изменить направление не более чем k человек в ряду.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 3
@@ -413,6 +420,7 @@ LRLRLRLRL
 29 38 45 52 57 62 65 68 69 70
 44 50 54 56 56 56 56 56 56
 </pre>
+  </details>
 
  <details>
   <summary>Решение</summary>
@@ -524,7 +532,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите q строк, i-я должна содержать ответ на i-й запрос.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 2 1
@@ -564,6 +573,7 @@ int main() {
   <p>Прямоугольник 3x2 слишком высок, чтобы поместиться в 3x4 rectangle.</p>
 
   <p>Суммарная площадь в ответа равна 2⋅3=6.</p>
+  </details>
 </article>
 
 
@@ -691,7 +701,8 @@ NO
 
   <p>Если ответов несколько, выведите любой.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 8
@@ -712,6 +723,7 @@ NO
 8 2 3 7 4 0 5 6 9
 </pre>
   <p>В первом наборе входных данных XOR на нечетных позициях равен 4⊕1⊕0⊕7=2 и XOR на четных позициях 2⊕5⊕6⊕3=2.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
