--- a/src/components/alg/alg-pract/codeforces/pages/elem-221013-Round827.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-221013-Round827.html
@@ -33,7 +33,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите «YES», если одно из чисел равно сумме двух других, и «NO» в противном случае. Вы можете вывести ответ в любом регистре (например, строки «YEs», «Yes», «Yes» и «YES» будут считаться как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 1 4 3
@@ -54,6 +55,7 @@ NO
 YES
 </pre>
   <p>Примечание. В первом наборе 1+3=4. Во втором наборе ни одно из чисел не является суммой двух других. В третьем наборе 9+11=20.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -113,7 +115,8 @@ int main() {
 
   <p>Вы можете вывести ответ в любом регистре (например, строки «YEs», «Yes», «Yes» и «YES» будут считаться как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 4
@@ -128,6 +131,7 @@ NO
 YES
 YES
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -270,7 +274,8 @@ R
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите одно целое число  — максимальное значение i+j, такое, что i и j удовлетворяют условию, что ai и aj взаимно просты, или выведите -1, если не существует таких i и j.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 3
@@ -296,6 +301,7 @@ R
 </pre>
   <p>Для первого примера можно выбрать i=j=3, при этом сумма индексов равна 6, так как 1 и 1 - взаимно простые.</p>
   <p>Для второго примера можно выбрать i=7 и j=5, при этом сумма индексов равна 7+5=12, так как 7 и 4 являются взаимно простыми.</p>
+  </details>
 </article>
 
 
@@ -329,7 +335,8 @@ R
 
   <p>Обратите внимание, что ответ на некоторые запросы не помещается в 32-битный целочисленный тип, поэтому вы должны использовать как минимум 64-битный целочисленный тип в вашем языке программирования (например, long long для C++).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 4 5
@@ -354,6 +361,7 @@ R
     <li>Если длина ног Тимура составляет 9 или 10, то он может подняться по всей лестнице, так максимальная высота, на которую он может забраться это 1+2+1+5=9 метров.</li>
   </ul>
   <p>В первом вопросе второго тестового примера у Тимура нет ног, поэтому он не может подняться даже на одну ступеньку. :(</p>
+  </details>
 </article>
 
 
@@ -392,7 +400,8 @@ R
   <h4>Выходные данные</h4>
   <p>Для каждой операции выведите «YES», если возможно расположить элементы в обеих строках таким образом, что s будет лексикографически меньше t и «NO» в противном случае.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 5
@@ -432,6 +441,7 @@ YES
   <p>После четвертой операции s становится «aaabb» и нет способа сделать ее лексикографически меньше, чем «aaaaaa», поэтому ответ «NO».</p>
 
   <p>После пятой операции строка t становится «aaaaaaabcaabcaabca», и мы можем переставить символы в строках так: «bbaaa» и «caaaaaabcaabcaabaa», так что s будет лексикографически меньше t, поэтому мы должны ответить «YES».</p>
+  </details>
 </article>
 
 
@@ -465,7 +475,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите n целых чисел — любую перестановку массива a, при которой получается лексикографически максимальный массив префиксных OR.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 4
@@ -486,4 +497,5 @@ YES
 4 3 2 2 3 4
 7 1 4 2 3 4 5 1
 </pre>
+  </details>
 </article>
