--- a/src/components/code/code-c/c-courses/pages/elem-2018hir.html
+++ b/src/components/code/code-c/c-courses/pages/elem-2018hir.html
@@ -334,6 +334,9 @@ if (y > 0 && x > 0) {
 <article class="article">
   <div class="anchor" id="p10"></div>
   <h3>10 Метки, оператор goto и оператор switch в Си</h3>
+
+  <p>Оператор goto нужно избегать в своих программах.</p>
+  <p>Оператор switch это множественный выбор только для целых чисел.</p>
 </article>
 
 
@@ -341,6 +344,87 @@ if (y > 0 && x > 0) {
 <article class="article">
   <div class="anchor" id="p11"></div>
   <h3>11 Управление циклом в Си break, continue</h3>
+
+  <p>break и continue используются внутри цикла. break это goto за пределы цикла к следующей инструкции. continue это goto на проверку условия цикла и в начало следующей итерации.</p>
+  <p>Переведем десятичное число в шестнадцатеричное в цикле , пока на вход не придет 0.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int x;
+  while (1) {
+    scanf("%d", &x);
+    if (x == 0) break;
+    printf("Number %d in hex is %X\n", x, x);
+  }
+}
+</pre>
+  <p>Проверим является ли число простым. Циклом будем перебирать все числа от 2 пока не найдем делитель. Цикл до конца может и не дойти.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int x;
+  printf("Enter number ");
+  scanf("%d", &x);
+
+  for (int i = 2; i * i &lt;= x; i++) {
+    if (x % i == 0) break;
+  }
+
+  if (i * i > x) {
+    printf ("number %d is prime\n", x);
+  } else {
+    printf("Number %d is not prime\n", x);
+  }
+}
+</pre>
+  <p>Второй вариант с использованием булевской переменной. Цикл всегда будет работать от начала до конца. Поэтому по скорости работы этот вариант хуже первого.</p>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;stdbool.h&gt;
+
+int main() {
+  int x;
+  printf("Enter number ");
+  scanf("%d", &x);
+  bool is_prime = true;
+
+  for (int i = 2; i * i &lt;= x; i++) {
+    if (x % i == 0) is_prime = false;
+  }
+
+  if (is_prime) {
+    printf ("number %d is prime\n", x);
+  } else {
+    printf("Number %d is not prime\n", x);
+  }
+}
+</pre>
+  <p>Третий вариант с использованием функции проверки числа на простоту.</p>
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;stdbool.h&gt;
+
+bool is_prime(int n) {
+  for (int i = 2; i * i &lt;= n; i++) {
+    if (n % i == 0) return false;
+  }
+  return true;
+}
+
+int main() {
+  int x;
+  printf("Enter number ");
+  scanf("%d", &x);
+
+  if (is_prime(x)) {
+    printf ("number %d is prime\n", x);
+  } else {
+    printf("Number %d is not prime\n", x);
+  }
+}
+</pre>
 </article>
 
 
@@ -348,6 +432,39 @@ if (y > 0 && x > 0) {
 <article class="article">
   <div class="anchor" id="p12"></div>
   <h3>12 Разложение числа на множители на Си</h3>
+
+  <p>Любое целое число можно представить в виде произведения простых чисел единственным способом.</p>
+  <code>n = p1 * p2 * ... * pn</code>
+  <p>Такое разложение числа на простые множители лежит в основе шифрования RSA. Потому что эта задача асимптотически сложна. Существуют экспоненциальные алгоритмы в которых требуется полный перебор. Пока что нет ни одного не квантового простого способа разложить число на множители.</p>
+  <p>Например, разложим число 90 на множители. Начнем с наименьшего простого числа</p>
+  <code>90 / 2 = 45</code>
+  <p>45 на 2 уже не делится, берем следующее простое число 3</p>
+  <code>45 / 3 = 15, 15 / 3 = 5</code>
+  <p>45 на 3 делится два раза. В итоге получили простое число 5. В итоге число 90 раскладывается на произведение простых чисел</p>
+  <code>90 = 2 * 3 * 3 * 5</code>
+<pre>
+#include &lt;stdio.h&gt;
+
+void print(int n) {
+  printf("Number factors ");
+  int i = 2;
+  while (n != 1) {
+    while (x % i == 0) {
+      printf("%d", i);
+      n /= i;
+    }
+    i++;
+  }
+  printf("\n");
+}
+
+int main() {
+  int x;
+  printf("Enter number ");
+  scanf("%d", &x);
+  print(x);
+}
+</pre>
 </article>
 
 
@@ -355,6 +472,43 @@ if (y > 0 && x > 0) {
 <article class="article">
   <div class="anchor" id="p13"></div>
   <h3>13 Фильтрация потока чисел на Си</h3>
+
+  <p>Можно представить алгоритм как функцию y = f(x), где одно число подается на вход и одно число возвращается на выход.</p>
+  <p>Можно представить алгоритм как генератор чисел y = gen(x), где одно число подается на вход и возвращается последовательность чисел. </p>
+  <p>Можно представить алгоритм как обработку последовательности, где на вход подается последовательность чисел и на выходе возвращается последовательность.</p>
+  <p>Фильтрующий алгоритм принимает последовательность, а возвращает последовательность только тех чисел которые прошли фильтрацию.</p>
+  <p>Достанем из числа цифры начиная с младшего разряда. Выведем на экран все цифры.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int x;
+  printf("Enter number");
+  scanf("%d", &x);
+  while (x) {
+    int digit = x % 10;
+    printf("%d", digit);
+    x /= 10;
+  }
+}
+</pre>
+<p>Достанем из числа цифры начиная с младшего разряда. Выведем на экран только нечетные.</p>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int x;
+  printf("Enter number");
+  scanf("%d", &x);
+  while (x) {
+    int digit = x % 10;
+    ша (вшпше % 2 == 1) {
+      printf("%d", digit);
+    }
+    x /= 10;
+  }
+}
+</pre>
 </article>
 
 
@@ -362,6 +516,10 @@ if (y > 0 && x > 0) {
 <article class="article">
   <div class="anchor" id="p14"></div>
   <h3>14 Индуктивные функции на Си подсчёт, сумма, произведение</h3>
+
+  <p>Функция f индуктивная на пространстве последовательностей, если найдется функция перевычисления от двух аргументов. Если известно значение функции на подпоследовательности, то добавив еще один элемент, можно вычислить новое значение на новой подпоследовательности.</p>
+  <p>Индуктивная сумма последовательности. Для 0 элементов равна 0. Для 1 элемента равна сумме 0 и этого элемента. Для остальных случаев равна сумме элементов.</p>
+  <p>Индуктивное произведение последовательности. Для 0 элеметов равна 1, для 1 элемента равна произведению этого элемента на 1. Для остальных случаев равна произведению элементов.</p>
 </article>
 
 
@@ -369,6 +527,12 @@ if (y > 0 && x > 0) {
 <article class="article">
   <div class="anchor" id="p15"></div>
   <h3>15 Индуктивные функции на Си any of, all of</h3>
+
+  <p>Будет два алгоритма</p>
+  <ol>
+    <li>any of. это какое-то из чисел соответствует критерию (поисковый алгоритм). Начальное состояние false. Функция перечисления основана на логическом ИЛИ. Совпадает с индуктивной функцией сложения.</li>
+    <li>all of. это все числа соответствуют критерию. Начальное состояние true. Функция перечисления основана на логическом И. Совпадает с индуктивной функцией умножения.</li>
+  </ol>
 </article>
 
 
