--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -2,6 +2,47 @@
 
 <ol reversed>
 
+  <li>2025.07.25 пт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 44-62стр
+  </li>
+
+  <li>2025.07.24 чт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 1-44стр и начать книгу
+  </li>
+
+  <li>2025.07.23 ср
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 940-1000стр и закончить книгу
+    <br>2. <strong>Книга</strong> <i>1988 Уэйт - Язык Си. Руководство для начинающих 345стр</i> прочитать 0-7стр
+  </li>
+
+  <li>2025.07.22 вт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 925-940стр
+  </li>
+
+  <li>2025.07.21 пн
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 896-925стр
+  </li>
+
+  <li>2025.07.18 пт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 885-896стр
+  </li>
+
+  <li>2025.07.17 чт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 860-885стр
+  </li>
+
+  <li>2025.07.16 ср
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 810-860стр
+  </li>
+
+  <li>2025.07.15 вт
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 760-810стр
+  </li>
+
+  <li>2025.07.14 пн
+    <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 720-760стр
+  </li>
+
   <li>2025.07.10 чт
     <br>1. <strong>Книга</strong> <i>2020 Дейтел - Как программировать на C 1000стр</i> прочитать 700-720стр
   </li>
