--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp22.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp22.html
@@ -1237,4 +1237,107 @@ int main() {
   <p>В первом примере у Джека три выбора, куда переместиться с планеты 1. Если он переместится сразу на планету 4, то потратит 8 секунд. Если он переместится на планету 3, то потратит 3 секунды, но, поскольку в моменты времени 3 и 4 на планету 3 прибывают другие путешественники, то он сможет отправиться на планету 4 только в момент времени 5, затратив в сумме 8 секунд. Если же Джек переместится на планету 2, а потом на планету 4, то потратит в сумме всего лишь 2 + 5 = 7 секунд.</p>
 
   <p>Во втором примере с планеты 1 на планету 3 нельзя попасть, перемещаясь через звездные врата.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;algorithm&gt;
+#include &lt;climits&gt;
+#include &lt;iostream&gt;
+#include &lt;set&gt;
+#include &lt;utility&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+const int maxn = 100000, maxm = 100000;
+
+vector&lt;pair&lt;int, int&gt; &gt; edges[maxn];
+vector&lt;int&gt; times[maxn];
+
+int dist[maxn];
+
+struct compar
+{
+    bool operator ()(int v1, int v2) const
+    {
+        if (dist[v1] != dist[v2])
+        {
+            return dist[v1] &lt; dist[v2];
+        }
+        else
+        {
+            return v1 &lt; v2;
+        }
+    }
+};
+
+int main()
+{
+    ios_base::sync_with_stdio(false); cin.tie(NULL);
+
+    int n, m; cin >> n >> m;
+
+    for (int i = 0; i &lt; m; i++)
+    {
+        int a, b, c; cin >> a >> b >> c;
+        edges[a-1].push_back(make_pair(b-1, c));
+        edges[b-1].push_back(make_pair(a-1, c));
+    }
+    for (int i = 0; i &lt; n; i++)
+    {
+        int k; cin >> k;
+
+        times[i].resize(k);
+        for (int j = 0; j &lt; k; j++)
+        {
+            cin >> times[i][j];
+        }
+    }
+
+    fill_n(dist+1, n-1, INT_MAX);
+
+    set&lt;int, compar&gt; q;
+    for (int i = 0; i &lt; n; i++)
+    {
+        q.insert(i);
+    }
+
+    while (!q.empty())
+    {
+        int v = *q.begin(); q.erase(q.begin());
+        if (v == n-1 || dist[v] == INT_MAX)
+        {
+            break;
+        }
+
+        vector&lt;int&gt;::const_iterator ti(
+            lower_bound(times[v].begin(), times[v].end(), dist[v]));
+        while (ti != times[v].end() && dist[v] == *ti)
+        {
+            dist[v]++;
+            ++ti;
+        }
+
+        for (int i = 0; i &lt; (int)edges[v].size(); i++)
+        {
+            const pair&lt;int, int&gt;& p = edges[v][i];
+
+            set&lt;int, compar&gt;::iterator qi(q.find(p.first));
+            if (qi != q.end())
+            {
+                if (dist[v] + p.second &lt; dist[p.first])
+                {
+                    q.erase(qi);
+                    dist[p.first] = dist[v] + p.second;
+                    q.insert(p.first);
+                }
+            }
+        }
+    }
+
+    cout &lt;&lt; (dist[n-1] &lt; INT_MAX ? dist[n-1] : -1) &lt;&lt; '\n';
+}
+</pre>
+  </details>
 </article>
