--- a/src/components/alg/alg-conspect/yargu3/pages/elem-220521-Dem2022.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-220521-Dem2022.html
@@ -53,6 +53,8 @@
   <h4>Выходные данные</h4>
   <p>Одно целое число — количество различных способов угостить напитками путника. Выведите ответ по модулю 1000000007. В качестве первого напитка может быть предложен любой из них.</p>
 
+  <details>
+    <summary>Премеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3 2 0 5
@@ -80,6 +82,7 @@
 16 40 3 100 66
 </pre>
   <code>5</code>
+  </details>
 </article>
 
 
@@ -107,6 +110,8 @@
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — минимальное количество минут, которое потребуется Игорю, либо «-1» (без кавычек), если это невозможно.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 2 2 1 2
@@ -134,6 +139,7 @@
 1 2 20
 </pre>
   <code>-1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -224,6 +230,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Необходимо вывести одно целое число — количество пятниц тринадцатое в n-м году.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
   <code>2001</code>
   <code>2</code>
@@ -235,6 +243,7 @@ int main() {
   <h4>Пример 3</h4>
   <code>2015</code>
   <code>3</code>
+  </details>
 </article>
 
 
@@ -262,6 +271,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите целое число — максимально возможный заряд молнии, который сможет вместить рюкзак Игоря.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3 6
@@ -301,6 +312,7 @@ int main() {
 4 10
 </pre>
   <code>0</code>
+  </details>
 </article>
 
 
@@ -322,6 +334,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите для каждого эксперимента в отдельной строке количество простых чисел.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3
@@ -343,6 +357,7 @@ int main() {
 <pre>
 664579
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -418,6 +433,8 @@ int main() {
     <li>«-1», если определить, что произойдёт с Луной, невозможно.</li>
   </ul>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 4
@@ -438,6 +455,7 @@ int main() {
 14 15 14 13 12
 </pre>
   <code>DOWN</code>
+  </details>
 </article>
 
 
@@ -480,6 +498,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите для каждого ингредиента в порядке увеличения их номеров в отдельной строке его компоненты, если однозначно определить значения компонентов нельзя, то выведите строку «No solution» (без кавычек).</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 8
@@ -514,6 +534,7 @@ int main() {
 <pre>
 No solution
 </pre>
+  </details>
 </article>
 
 
@@ -541,6 +562,8 @@ No solution
   <h4>Выходные данные</h4>
   <p>Выведите «YES» (без кавычек), если колдун сможет водить девушку кругами по комнатам в замке, иначе выведите «NO» (без кавычек).</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3 3 1
@@ -558,6 +581,7 @@ No solution
 1 4
 </pre>
   <code>NO</code>
+  </details>
 </article>
 
 
@@ -591,7 +615,9 @@ No solution
 
   <p>После каждого действия вашей программы выводите символ перевода строки. Если вы используете «writeln» в Паскале, «cout &lt;&lt; ... &lt;&lt; endl» в C++, «System.out.println» в Java или «print» в Python, сброс потока вывода у вас происходит автоматически, дополнительно делать «flush» не oбязательно. Если вы используете другой способ вывода, рекомендуется делать «flush», но все равно обязательно требуется выводить символ перевода строки.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
+  <h4></h4>
 <pre>
 2 2
 
@@ -603,6 +629,7 @@ No solution
 ! 2 1
 </pre>
   <p>В первом тесте арбузы весов {1,2}, и показано возможное взаимодействие между решением и тестирующей системой.</p>
+  </details>
 </article>
 
 
@@ -622,9 +649,11 @@ No solution
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите ответ на задачу.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
   <code>4 4</code>
   <code>2800</code>
+  </details>
 </article>
 
 
@@ -643,4 +672,26 @@ No solution
 
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите N чисел через пробел — номера ВУЗов, отсортированных по возрастанию значения F. В случае равенства функции F ВУЗы должны следовать в том порядке, в котором они давались во входных данных.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3 2
+2 2
+2 1
+1 2
+</pre>
+  <code>2 3 1</code>
+
+    <h4>Пример 2</h4>
+<pre>
+4 3
+3 1 2
+1 1 1
+2 1 1
+1 2 3
+</pre>
+  <code>2 3 1 4</code>
+  </details>
 </article>
