--- a/src/components/alg/alg-conspect/yargu3/pages/elem-241229-NY2025.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-241229-NY2025.html
@@ -50,6 +50,8 @@
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — количество ящиков, которое потребуется Игорю для хранения всего урожая.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3
@@ -70,6 +72,7 @@
 1 1
 </pre>
   <code>7</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -130,6 +133,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите число, которое потерял Кеша.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 5
@@ -158,6 +163,7 @@ int main() {
 7
 </pre>
   <code>6</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -219,6 +225,23 @@ int main() {
 
   <h4>Выходные данные</h4>
   <p>Выведите «YES», если Сольмир сможет уничтожить все отряды Крэг Хака за одно заклинание «цепная молния», иначе выведите «NO».</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+5 100
+95 25 45 12 3
+</pre>
+  <code>YES</code>
+
+    <h4>Пример 2</h4>
+<pre>
+6 3199
+100 100 100 100 100 100
+</pre>
+  <code>NO</code>
+  </details>
 </article>
 
 
@@ -242,6 +265,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите количество прямоугольников, которое можно составить, используя все n кубиков.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
   <code>7</code>
   <code>2</code>
@@ -257,6 +282,7 @@ int main() {
   <h4>Пример 4</h4>
   <code>25</code>
   <code>3</code>
+  </details>
 </article>
 
 
@@ -286,6 +312,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите в единственной строке 'enter', если Игорь поступает без вступительных экзаменов, 'entrance exams', если Игорю придется сдавать вступительный экзамен, 'no chance', если Игорь не сможет поступить в аспирантуру.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 6 50
@@ -309,6 +337,7 @@ int main() {
 10 20 30 50 50 60 70 80 90
 </pre>
   <code>entrance exams</code>
+  </details>
 </article>
 
 
@@ -337,7 +366,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите в порядке возрастания номера цветов, которые могут выбрать Игорь и Ира. Если подходящих цветов нет, то нужно вывести «-1» (без кавычек).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 60 80 80 100
@@ -347,6 +377,7 @@ int main() {
 4 80 80 100 60
 </pre>
   <code>2 3 </code>
+  </details>
 </article>
 
 
@@ -373,6 +404,32 @@ int main() {
 
   <h4>Выходные данные</h4>
   <p>Выведите все имена, которые нравятся Игорю и Ире в алфавитном порядке, без повторений имен.</p>
+
+  <details>
+    <summary>Пример</summary>
+<pre>
+5 4 2 3
+kirill
+ruslan
+sonya
+veronika
+vasya
+ruslan
+alina
+sonya
+veronika
+nastya
+masha
+sasha
+masha
+natasha
+</pre>
+<pre>
+ruslan
+sonya
+veronika
+</pre>
+  </details>
 </article>
 
 
@@ -398,6 +455,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число, максимальный шаг капельницы.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 5
@@ -411,6 +470,7 @@ int main() {
 75 100 125 80 15 8 33 37 85 150
 </pre>
   <code>1</code>
+  </details>
 </article>
 
 
@@ -442,7 +502,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке через пробел выведите номера жильцов, которые остались за дверью подъезда, в порядке возрастания.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
+  <h4></h4>
 <pre>
 8 10
 - 1
@@ -457,6 +519,7 @@ int main() {
 + 7
 </pre>
   <code>5 7 8 </code>
+  </details>
 </article>
 
 
@@ -484,7 +547,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число – долг Крэг Хака.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 10 5
@@ -492,5 +556,6 @@ int main() {
 30 25
 </pre>
   <code>15</code>
+  </details>
 </article>
 
