--- a/src/components/alg/alg-pract/codeforces/pages/elem-100219-Round1.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-100219-Round1.html
@@ -1,5 +1,5 @@
 <article class="article">
-  <a href="https://codeforces.com/contest/134" target="_blank">Codeforces Beta Round 1 2010-02-19</a>
+  <a href="https://codeforces.com/contest/1" target="_blank">Codeforces Beta Round 1 2010-02-19</a>
 </article>
 
 
@@ -67,7 +67,31 @@ int main() {
   long long tilesM = (m + a - 1) / a;
 
   // вывод результата
-  cout &lt;&lt; tilesN + tilesM;
+  cout &lt;&lt; tilesN * tilesM;
+}
+</pre>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  long long n, m, a;
+  cin >> n >> m >> a;
+
+  // решение
+  long long h1 = n / a;
+  long long h2 = m / a;
+  if (n % a != 0) {
+    h1++;
+  }
+  if (m % a != 0) {
+    h2++;
+  }
+
+  // вывод результата
+  cout &lt;&lt; h1 * h2;
 }
 </pre>
   </details>
@@ -91,7 +115,7 @@ int main() {
   <p>Ваша задача написать программу, которая считывает последовательность обозначений ячеек и выводит каждое из обозначений в другой форме записи.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано целое число n (1 ≤ n ≤ 105), количество обозначений в тесте. Далее идет n строк, каждая из которых содержит обозначение. Известно, что все обозначения корректны, и не содержат ячейки с номерами строк или столбцов больших 106.</p>
+  <p>В первой строке записано целое число n (1 ≤ n ≤ 10⁵), количество обозначений в тесте. Далее идет n строк, каждая из которых содержит обозначение. Известно, что все обозначения корректны, и не содержат ячейки с номерами строк или столбцов больших 10⁶.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите n строк — каждая строка должна содержать обозначение ячейки в отличной форме записи.</p>
@@ -106,12 +130,108 @@ BC23
 BC23
 R23C55
 </pre>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Определим тип обозначения. Если в обозначении встречается буква после цифры, то это второй тип, иначе перывый. Если первый тип, то переводим буквенное обозначение колонки в число. Если второе то переводим числовое обозначение колонки в буквенное.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;string&gt;
+
+using namespace std;
+
+int main() {
+  // условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // ввод данных
+  int n; // число ячеек в таблице
+  cin >> n;
+
+  // решение
+  // для каждой ячейки
+  while (n--) {
+    string cell; // обозначение строки и столбца
+    cin >> cell;
+
+    // определим тип обозначения
+    // 1 - колонка - строка (буквы - цифры)
+    // 2 - RXCY строка номер - колонка номер
+    int type = 1;
+    int flag_dig = 0; // встретилась цифра
+
+    for (char ch : cell) {
+      if (flag_dig && isalpha(ch)) {
+        type = 2; // встретилась буква после цифры
+      }
+      if (isdigit(ch)) {
+        flag_dig = 1;
+      }
+    }
+
+    string res = "";
+    if (type == 1) {
+      int c = 0; // колонка
+      string r = ""; // строка
+      for (char ch : cell) {
+        if (isalpha(ch)) {
+          // для колонки
+          //переводим буквенное обозначение в число
+          c = c * 26 + (ch - 'A' + 1);
+        }
+        if (isdigit(ch)) {
+          // для строки
+          // собираем число в виде строки из цифр
+          r += ch;
+        }
+      }
+      res += "R" + r + "C" + to_string(c);
+    }
+
+
+    if (type == 2) {
+      string r = ""; // строка
+      string c = ""; // колонка
+      int i = 1;
+      for (; cell[i] != 'C'; i++) {
+        // для строки
+        // собираем число в виде строки из цифр
+        r += cell[i];
+      }
+      for (i++; i &lt; cell.size(); i++) {
+        // для колонки
+        // собираем число в виде строки из цифр
+        c += cell[i];
+      }
+      int dig_c = stoi(c); // переводим строку в число
+      string col = "";
+      // переводим числовое обозначение в буквенное
+      while (dig_c) {
+        dig_c--; // чтобы 'A' соответствовало 0, а не 1
+        char l = dig_c % 26 + 'A';
+
+        col = l + col;
+        dig_c /= 26;
+      }
+      res += col + r;
+    }
+
+    // вывод результата
+    cout &lt;&lt; res &lt;&lt; '\n';
+  }
+
+}
+</pre>
+  </details>
 </article>
 
 
 <!-- Задача C. Древнеберляндский цирк -->
 <article class="article">
-  <div class="anchor" id="task2"></div>
+  <div class="anchor" id="task3"></div>
   <h3>Задача C. Древнеберляндский цирк</h3>
 
   <div><i>Ограничение по времени 2с
@@ -138,5 +258,88 @@ R23C55
 0.000000 1.000000
 </pre>
   <code>1.00000000</code>
+
+  <details>
+    <summary>Решение</summary>
+    <h4>Тест 31</h4>
+<pre>
+46.172435 -22.819705
+17.485134 -1.663888
+101.027565 111.619705
+</pre>
+    <code>16483.233301</code>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;cmath&gt;
+#include &lt;algorithm&gt;
+#include &lt;iomanip&gt;
+
+using namespace std;
+
+#define PI acos(-1)
+
+double gcd(double a, double b) {
+  // проверка на близость к нулю (из-за погрешностей вычислений)
+  return a &lt; 0.01 ? b : gcd(fmod(b, a), a);
+}
+
+int main() {
+// условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // ввод данных
+  double x1, y1, x2, y2, x3, y3;
+  cin >> x1 >> y1 >> x2 >> y2 >> x3 >> y3;
+
+  // решение
+
+  // длины сторон треугольника, образованного тремя столбами
+  double a, b, c;
+  a = sqrt((x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2));
+  b = sqrt((x2 - x3) * (x2 - x3) + (y2 - y3) * (y2 - y3));
+  c = sqrt((x1 - x3) * (x1 - x3) + (y1 - y3) * (y1 - y3));
+
+  // полупериметр и площадь по формуле Герона
+  double p, s;
+  p = (a + b + c) / 2.0;
+  s = sqrt(p * (p - a) * (p - b) * (p - c));
+
+  // радиус описанной окружности (это будет радиус цирковой арены)
+  double r;
+  r = a * b * c / (4 * s);
+
+  // сортируем стороны (чтобы c была наибольшей)
+  if (a > c) {
+    swap(a, c);
+  }
+  if (b > c) {
+    swap(b, c);
+  }
+
+  // центральные углы, под которыми видны
+  // стороны треугольника из центра окружности
+  double A, B, C;
+  A = 2 * asin(a / (2 * r));
+  B = 2 * asin(b / (2 * r));
+  C = 2 * PI - A - B;
+
+  // Вычисляем НОД этих углов — это даст нам угол p,
+  // на который можно "разбить" окружность для
+  // построения минимального правильного многоугольника
+  p = gcd(A, B);
+  p = gcd(p, C);
+
+  // Считаем площадь правильного многоугольника
+  // с таким углом p и радиусом r
+  double res = (PI * r * r * sin(p)) / p;
+
+  // вывод результата
+  cout &lt;&lt; fixed &lt;&lt; setprecision(6) &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
