--- a/src/components/alg/alg-pract/codeforces/pages/elem-130530-Round186.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-130530-Round186.html
@@ -35,20 +35,23 @@
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите целое число — максимальное состояние банковского счета, которое может получить Илья.</p>
 
-  <h4>Пример 1</h4>
-  <code>2230</code>
-  <code>2230</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2230</code>
+    <code>2230</code>
 
-  <h4>Пример 2</h4>
-  <code>-10</code>
-  <code>0</code>
+    <h4>Пример 2</h4>
+    <code>-10</code>
+    <code>0</code>
 
-  <h4>Пример 3</h4>
-  <code>-100003</code>
-  <code>-10000</code>
+    <h4>Пример 3</h4>
+    <code>-100003</code>
+    <code>-10000</code>
 
-  <p>В первом тестовом примере Илье не выгодно использовать подарок.</p>
-  <p>Во втором тестовом примере можно удалить цифру 1 и получить состояние счета равное 0.</p>
+    <p>В первом тестовом примере Илье не выгодно использовать подарок.</p>
+    <p>Во втором тестовом примере можно удалить цифру 1 и получить состояние счета равное 0.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -101,6 +104,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите m целых чисел — ответы на запросы в том порядке, в котором запросы заданы во входных данных.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 ......
@@ -134,6 +139,7 @@ int main() {
 2
 0
 </pre>
+  </details>
 
   <details>
     <summary>Наивное решение - цикл в цикле</summary>
@@ -238,6 +244,8 @@ int main() {
 
   <p>Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-х битовых чисел на С++. Рекомендуется использовать потоки cin, cout или спецификатор %I64d.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 1
@@ -258,6 +266,7 @@ int main() {
 3 4
 </pre>
   <p>Тогда красота матрицы будет равна: 4 + 1 + 2 + 3 + 4 = 14.</p>
+  </details>
 </article>
 
 
@@ -287,6 +296,8 @@ int main() {
 
   <p>Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-х битовых чисел на С++. Рекомендуется использовать потоки cin, cout или спецификатор %I64d.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 10 4 6
@@ -316,6 +327,7 @@ int main() {
 5 10 14
 </pre>
   <code>-1</code>
+  </details>
 </article>
 
 
@@ -348,6 +360,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n цифр в системе счисления по основанию m — полученное третье число. Цифры выводите в порядке от старших разрядов к младшим.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 4 7
@@ -363,5 +377,6 @@ int main() {
 1 0 1 2 4
 </pre>
   <code>4 4 4 3 2</code>
+  </details>
 </article>
 
