--- a/src/components/alg/alg-pract/codeforces/pages/elem-220614-Round799.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-220614-Round799.html
@@ -40,7 +40,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора данных выведите единственное число — количество участников, пробежавших большее расстояние, чем Тимур.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 2 3 4 1
@@ -54,6 +55,7 @@
 1
 3
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -119,7 +121,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора данных выведите единственное число — длину оставшегося массива. Помните, что в оставшемся массиве все элементы различны, а его длина максимальна.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 6
@@ -148,6 +151,7 @@ int main() {
     <li>Выбрать индексы 1 и 3. Тогда массив станет [9,1,1]→[1].</li>
   </ol>
   <p>Финальный массив имеет длину 1, так что ответом является 1. Можно доказать, что Sho не может получить массив большей длины.</p>
+  </details>
 </article>
 
 
@@ -177,7 +181,8 @@ int main() {
 
   <p>Гарантируется, что входные данные даны таким образом, что всегда существует единственное расположение слона, не находящееся на краях доски.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 
@@ -214,6 +219,7 @@ int main() {
 4 5
 </pre>
   <p>Первый пример показан в условии. Так как слон находится на пересечении ряда 4 и столбца 3, правильным ответом является 4 3.</p>
+  </details>
 </article>
 
 
@@ -241,7 +247,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите единственное число  — количество различных палиндромов, которые увидит Виктор, если будет смотреть на часы каждые x минут, начиная со времени s.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 03:12 360
@@ -260,6 +267,7 @@ int main() {
 1
 </pre>
   <p>Первый пример объяснён в условии.</p>
+  </details>
 </article>
 
 
@@ -287,7 +295,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите единственное число — минимальное количество операций, необходимое чтобы сумма всех элементов массива равнялась s. Выведите «-1», если получить массив с суммой элементов s невозможно.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 3 1
@@ -317,6 +326,7 @@ int main() {
   <p>В первом наборе сумма элементов во всем массиве уже равна 1, поэтому никаких операций больше не требуется.</p>
   <p>Во втором наборе сумма элементов равна 2, а нам нужна сумма 1, поэтому мы можем удалить из массива первый элемент, после чего массив превратится в [1,0], сумма элементов которого будет равна 1.</p>
   <p>В третьем наборе сумма элементов массива изначально равна 5, а нам нужна сумма 3. Мы можем получить такую сумму удалив первые 2 элемента, после чего удалив последний элемент, сделав всего 3 операции. Массив станет [0,1,1,1,0,0], сумма элементов которого будет 3.</p>
+  </details>
 </article>
 
 
@@ -344,7 +354,8 @@ int main() {
 
   <p>Вы можете выводить ответ в любом регистре (например, вывод «yEs», «yes», «Yes» и «YES» всё ещё будет считаться корректным).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 4
@@ -379,6 +390,7 @@ YES
   <p>В пятом наборе Вы можете выбрать i=4, j=3, k=1. Тогда a4+a3+a1=4+8+1=13, а их сумма заканчивается цифрой 3.</p>
 
   <p>В шестом наборе Вы можете выбрать i=1, j=2, k=6. Тогда a1+a2+a6=16+38+99=153, а их сумма заканчивается цифрой 3.</p>
+  </details>
 </article>
 
 
@@ -409,7 +421,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите единственное число — количество индексов, удовлетворяющих условиям.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 4 2
@@ -445,6 +458,7 @@ YES
     <li>i=3 : подмассив [a3,a4]=[3,2], и 1⋅3 &lt; 2⋅2.</li>
     <li>i=4 : подмассив [a4,a5]=[2,1], но 1⋅2=2⋅1, так что этот подмассив не удовлетворяет условиям.</li>
   </ul>
+  </details>
 </article>
 
 
@@ -480,7 +494,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите три числа — a, l, и r таких, что выигрыш Мариана в казино будет максимальным. Если существует несколько различных ответов, вы можете вывести любой из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 5
@@ -508,4 +523,5 @@ YES
     <li>В последнем раунде Мариан закончит с 8 долларами, так как он вновь угадал выпавшее число.</li>
   </ul>
   <p>Для второго набора есть много подходящих ответов, однако можно доказать что Мариан не может закончить играть с более чем 2 долларами, так что любой выбор l=r с подходящим a будет приемлемым.</p>
+  </details>
 </article>
