--- a/src/components/alg/alg-pract/codeforces/pages/elem-250608-Round1029.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250608-Round1029.html
@@ -49,7 +49,8 @@
 
   <p>Вы можете выводить каждую букву в любом регистре (строчную или заглавную). Например, строки «yEs», «yes», «Yes» и «YES» будут приняты как положительный ответ.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 4 2
@@ -77,19 +78,20 @@ YES
 NO
 </pre>
 
-  <p>В первом наборе входных данных оптимальный способ таков:</p>
-  <ul>
-    <li>В момент времени 0
-      дверь открыта, поэтому Юсеф проходит.</li>
-    <li>В момент времени 1
-      дверь закрыта, Юсеф может сейчас использовать кнопку и пройти через дверь.</li>
-    <li>В момент времени 2
-      действие кнопки все еще продолжается, поэтому Юсеф все еще может пройти.</li>
-    <li>В момент времени 3
-      действие кнопки закончилось, но дверь открыта. Юсеф проходит и добирается до выхода.</li>
-  </ul>
-  <p>Во втором наборе входных данных у Юсефа есть кнопка на 3 секунды, но ему нужно как минимум 4 секунды, чтобы добраться до выхода. Поэтому ответ NO.</p>
-  <p>В третьем наборе входных данных Юсеф может включить кнопку перед тем, как начать двигаться. Все двери останутся открытыми, пока он не доберется до выхода.</p>
+    <p>В первом наборе входных данных оптимальный способ таков:</p>
+    <ul>
+      <li>В момент времени 0
+        дверь открыта, поэтому Юсеф проходит.</li>
+      <li>В момент времени 1
+        дверь закрыта, Юсеф может сейчас использовать кнопку и пройти через дверь.</li>
+      <li>В момент времени 2
+        действие кнопки все еще продолжается, поэтому Юсеф все еще может пройти.</li>
+      <li>В момент времени 3
+        действие кнопки закончилось, но дверь открыта. Юсеф проходит и добирается до выхода.</li>
+    </ul>
+    <p>Во втором наборе входных данных у Юсефа есть кнопка на 3 секунды, но ему нужно как минимум 4 секунды, чтобы добраться до выхода. Поэтому ответ NO.</p>
+    <p>В третьем наборе входных данных Юсеф может включить кнопку перед тем, как начать двигаться. Все двери останутся открытыми, пока он не доберется до выхода.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -179,7 +181,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите любую перестановку p1, p2, … , pn, которая максимизирует количество операций сжатия.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 3
@@ -190,21 +193,22 @@ int main() {
 2 3 6 4 5 1
 </pre>
 
-  <p>В первом наборе входных данных:</p>
-  <ul>
-    <li>Мы выбираем p=[1,3,2].</li>
-    <li>Выбираем индекс 2 и удаляем p2 из массива. Массив становится p=[1,2].</li>
-  </ul>
-  <p>Можно показать, что максимальное количество операций, которые мы можем выполнить, равно 1. Другой допустимый ответ — p=[2,3,1].</p>
-  <p>Во втором наборе входных данных:</p>
-  <ul>
-    <li>Мы выбираем p=[2,3,6,4,5,1].</li>
-    <li>Выбираем индекс 5 и удаляем p5 из массива. Массив становится p=[2,3,6,4,1].</li>
-    <li>Выбираем индекс 3 и удаляем p3 из массива. Массив становится p=[2,3,4,1].</li>
-    <li>Выбираем индекс 3 и удаляем p3 из массива. Массив становится p=[2,3,1].</li>
-    <li>Выбираем индекс 2 и удаляем p2 из массива. Массив становится p=[2,1].</li>
-  </ul>
-  <p>Максимальное количество операций, которые мы можем выполнить, равно 4. Любая перестановка со счётом 4 является допустимой.</p>
+    <p>В первом наборе входных данных:</p>
+    <ul>
+      <li>Мы выбираем p=[1,3,2].</li>
+      <li>Выбираем индекс 2 и удаляем p2 из массива. Массив становится p=[1,2].</li>
+    </ul>
+    <p>Можно показать, что максимальное количество операций, которые мы можем выполнить, равно 1. Другой допустимый ответ — p=[2,3,1].</p>
+    <p>Во втором наборе входных данных:</p>
+    <ul>
+      <li>Мы выбираем p=[2,3,6,4,5,1].</li>
+      <li>Выбираем индекс 5 и удаляем p5 из массива. Массив становится p=[2,3,6,4,1].</li>
+      <li>Выбираем индекс 3 и удаляем p3 из массива. Массив становится p=[2,3,4,1].</li>
+      <li>Выбираем индекс 3 и удаляем p3 из массива. Массив становится p=[2,3,1].</li>
+      <li>Выбираем индекс 2 и удаляем p2 из массива. Массив становится p=[2,1].</li>
+    </ul>
+    <p>Максимальное количество операций, которые мы можем выполнить, равно 4. Любая перестановка со счётом 4 является допустимой.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -286,7 +290,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — максимальное количество отрезков, которые образуют классное разделение.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 6
@@ -317,9 +322,10 @@ int main() {
 4
 </pre>
 
-  <p>Первый пример разобран в условии. Мы можем разделить его на b1=[1,2], b2=[2,3,1,5]. Можно показать, что нет другого разделения с большим количеством отрезков.</p>
-  <p>Во втором примере мы можем разделить массив на b1=[1,2], b2=[1,3,2], b3=[1,3,2]. Максимальное количество отрезков равно 3.</p>
-  <p>В третьем примере единственное разделение, которое мы можем сделать, это b1=[5,4,3,2,1]. Любое другое разделение не будет удовлетворять условию. Поэтому ответ равен 1.</p>
+    <p>Первый пример разобран в условии. Мы можем разделить его на b1=[1,2], b2=[2,3,1,5]. Можно показать, что нет другого разделения с большим количеством отрезков.</p>
+    <p>Во втором примере мы можем разделить массив на b1=[1,2], b2=[1,3,2], b3=[1,3,2]. Максимальное количество отрезков равно 3.</p>
+    <p>В третьем примере единственное разделение, которое мы можем сделать, это b1=[5,4,3,2,1]. Любое другое разделение не будет удовлетворять условию. Поэтому ответ равен 1.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -407,7 +413,8 @@ int main() {
 
   <p>Вы можете выводить ответ в любом регистре (верхнем или нижнем). Например, строки «yEs», «yes», «Yes», и «YES» будут распознаны как положительные ответы.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 4
@@ -432,12 +439,14 @@ YES
 NO
 </pre>
 
-  <p>Во втором наборе входных данных мы можем сделать следующее:</p>
-  <ul>
-    <li>Выполнить 1 операцию первого типа. Массив становится [20,16,12,8,4].</li>
-    <li>Выполнить 4 операции второго типа. Массив становится [0,0,0,0,0].</li>
-  </ul>
-  <p>В первом, третьем, четвертом и шестом наборах входных данных можно доказать, что невозможно сделать все элементы равными нулю, используя любое количество операций.</p>
+    <p>Во втором наборе входных данных мы можем сделать следующее:</p>
+    <ul>
+      <li>Выполнить 1 операцию первого типа. Массив становится [20,16,12,8,4].</li>
+      <li>Выполнить 4 операции второго типа. Массив становится [0,0,0,0,0].</li>
+    </ul>
+    <p>В первом, третьем, четвертом и шестом наборах входных данных можно доказать, что невозможно сделать все элементы равными нулю, используя любое количество операций.</p>
+  </details>
+
 
   <details>
     <summary>Решение</summary>
@@ -547,7 +556,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — ответ для данного набора.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10
 4
@@ -594,25 +604,116 @@ int main() {
 2
 </pre>
 
-  <p>В первом наборе входных данных мы можем сделать следующее:</p>
-  <ul>
-    <li>Мы решим не удалять никакой индекс.</li>
-    <li>Выберите индекс 3 и присвойте a3:=b4. Массивы становятся: a=[1,3,2,4], b=[4,3,2,2].</li>
-    <li>Выберите индекс 1 и присвойте a1:=b2. Массивы становятся: a=[3,3,2,4], b=[4,3,2,2].</li>
-    <li>Выберите индекс 1 и присвойте b1:=a2. Массивы становятся: a=[3,3,2,4], b=[3,3,2,2]. Обратите внимание, что вы можете выполнить ai:=bi+1 и bi:=ai+1 на одном и том же индексе i.</li>
-  </ul>
-  <p>Количество совпадений равно 3. Можно показать, что это максимальный ответ, который мы можем достичь.</p>
-  <p>Во втором наборе входных данных мы можем сделать следующее, чтобы достичь максимума в 3:</p>
-  <ul>
-    <li>Давайте решим удалить индекс 5. Массивы становятся: a=[2,1,5,3,4], b=[3,2,4,5,6].</li>
-    <li>Выберите индекс 4 и присвойте b4:=a5. Массивы становятся: a=[2,1,5,3,4], b=[3,2,4,4,6].</li>
-    <li>Выберите индекс 3 и присвойте a3:=b4. Массивы становятся: a=[2,1,4,3,4], b=[3,2,4,4,6].</li>
-    <li>Выберите индекс 2 и присвойте a2:=b3. Массивы становятся: a=[2,4,4,3,4], b=[3,2,4,4,6].</li>
-    <li>Выберите индекс 1 и присвойте b1:=a2. Массивы становятся: a=[2,4,4,3,4], b=[4,2,4,4,6].</li>
-    <li>Выберите индекс 2 и присвойте b2:=a3. Массивы становятся: a=[2,4,4,3,4], b=[4,4,4,4,6].</li>
-    <li>Выберите индекс 1 и присвойте a1:=b2. Массивы становятся: a=[4,4,4,3,4], b=[4,4,4,4,6].</li>
-  </ul>
-  <p>В третьем наборе входных данных можно показать, что мы не можем получить никаких совпадений. Поэтому ответ равен 0.</p>
+    <p>В первом наборе входных данных мы можем сделать следующее:</p>
+    <ul>
+      <li>Мы решим не удалять никакой индекс.</li>
+      <li>Выберите индекс 3 и присвойте a3:=b4. Массивы становятся: a=[1,3,2,4], b=[4,3,2,2].</li>
+      <li>Выберите индекс 1 и присвойте a1:=b2. Массивы становятся: a=[3,3,2,4], b=[4,3,2,2].</li>
+      <li>Выберите индекс 1 и присвойте b1:=a2. Массивы становятся: a=[3,3,2,4], b=[3,3,2,2]. Обратите внимание, что вы можете выполнить ai:=bi+1 и bi:=ai+1 на одном и том же индексе i.</li>
+    </ul>
+    <p>Количество совпадений равно 3. Можно показать, что это максимальный ответ, который мы можем достичь.</p>
+    <p>Во втором наборе входных данных мы можем сделать следующее, чтобы достичь максимума в 3:</p>
+    <ul>
+      <li>Давайте решим удалить индекс 5. Массивы становятся: a=[2,1,5,3,4], b=[3,2,4,5,6].</li>
+      <li>Выберите индекс 4 и присвойте b4:=a5. Массивы становятся: a=[2,1,5,3,4], b=[3,2,4,4,6].</li>
+      <li>Выберите индекс 3 и присвойте a3:=b4. Массивы становятся: a=[2,1,4,3,4], b=[3,2,4,4,6].</li>
+      <li>Выберите индекс 2 и присвойте a2:=b3. Массивы становятся: a=[2,4,4,3,4], b=[3,2,4,4,6].</li>
+      <li>Выберите индекс 1 и присвойте b1:=a2. Массивы становятся: a=[2,4,4,3,4], b=[4,2,4,4,6].</li>
+      <li>Выберите индекс 2 и присвойте b2:=a3. Массивы становятся: a=[2,4,4,3,4], b=[4,4,4,4,6].</li>
+      <li>Выберите индекс 1 и присвойте a1:=b2. Массивы становятся: a=[4,4,4,3,4], b=[4,4,4,4,6].</li>
+    </ul>
+    <p>В третьем наборе входных данных можно показать, что мы не можем получить никаких совпадений. Поэтому ответ равен 0.</p>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios_base::sync_with_stdio(false);
+  cin.tie(nullptr);
+  cout.tie(nullptr);
+
+// условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // число тестов
+  int t;
+  cin >> t;
+
+  while (t--) {
+    // ввод данных
+    int n; // размер массивов
+    cin >> n;
+    vector&lt;vector&lt;pair&lt;int, int&gt; &gt; &gt; All_el(n + 1);
+    vector&lt;vector&lt;int&gt; &gt; A(n + 1);
+    vector&lt;vector&lt;int&gt; &gt; B(n + 1);
+    pair&lt;int, int&gt; tmp;
+    int h;
+
+    // собираем элементы первого массива
+    for (int i = 1; i &lt;= n; i++) {
+      cin >> h;
+      tmp.first = i;
+      tmp.second = 1; // признак первого массива
+      All_el[h].push_back(tmp);
+      A[h].push_back(i);
+    }
+
+    // собираем элементы второго массива
+    for (int i = 1; i &lt;= n; i++) {
+      cin >> h;
+      tmp.first = i;
+      tmp.second = 2; // признак второго массива
+      All_el[h].push_back(tmp);
+      B[h].push_back(i);
+    }
+
+    for (int i = 1; i &lt; All_el.size(); i++) {
+      sort(All_el[i].begin(), All_el[i].end());
+    }
+    int best = 0;
+
+    for (int i = 1; i &lt;= n; i++) {
+      if (All_el[i].size() >= 2) {
+        for (int j = 0; j &lt; All_el[i].size() - 1; j++) {
+          if (All_el[i][j].first == All_el[i][j + 1].first) {
+            best = max(best, All_el[i][j].first);
+          } else if (All_el[i][j].second != All_el[i][j + 1].second) {
+            if (All_el[i][j + 1].first - All_el[i][j].first > 1) {
+              best = max(best, All_el[i][j].first);
+            }
+          }
+        }
+      }
+    }
+
+    // если в массиве есть два одинаковых соседних числа
+    // то можно сделать красивую последовательность
+    for (int i = 1; i &lt;= n; i++) {
+      if (A[i].size() > 1) {
+        best = max(best, A[i][A[i].size() - 2]);
+      }
+      if (B[i].size() > 1) {
+        best = max(best, B[i][B[i].size() - 2]);
+      }
+    }
+
+    // вывод результата
+    cout &lt;&lt; best &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -642,14 +743,15 @@ int main() {
 
   <p>Каждый тест состоит из нескольких строк. Первая строка теста содержит целое число n (2 ≤ n ≤ 2⋅10⁵) — количество вершин в дереве.</p>
 
-  <p>Затем следуют n-1 строк, каждая из которых содержит два целых числа u и v (1≤u,v≤n,u≠v), которые описывают пару вершин, соединённых ребром. Гарантируется, что данный граф является деревом и не имеет петель или кратных рёбер.</p>
+  <p>Затем следуют n-1 строк, каждая из которых содержит два целых числа u и v (1 ≤ u, v ≤ n, u ≠ v), которые описывают пару вершин, соединённых ребром. Гарантируется, что данный граф является деревом и не имеет петель или кратных рёбер.</p>
 
   <p>Гарантируется, что сумма n по всем наборам входных данных не превышает 2⋅10⁵.</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого теста выведите одно целое число x — количество различных массивов a, которые делают дерево особым, по модулю 10⁹+7.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 2
@@ -708,6 +810,140 @@ int main() {
 0
 4
 </pre>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Нужно посчитать листья дерева. Если list = 1 то ответ 2<sup>n</sup>. Если листьев 2, то нужно думать. Это обход дерева методом BFS.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;queue&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios_base::sync_with_stdio(false);
+  cin.tie(nullptr);
+  cout.tie(nullptr);
+
+// условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // число тестов
+  int t;
+  cin >> t;
+
+  while (t--) {
+    // ввод данных
+    int n; // число вершин
+    cin >> n;
+
+    vector&lt;vector&lt;int&gt; &gt; G(n + 1);
+    for (int i = 0; i &lt; n - 1; i++) {
+      int a, b;
+      cin >> a >> b;
+      G[a].push_back(b);
+      G[b].push_back(a);
+    }
+
+    long long mod = 1e9 + 7;
+    vector&lt;int&gt; Level(n + 1);
+    vector&lt;int&gt; Mark(n + 1);
+    queue&lt;int&gt; q;
+    q.push(1);
+    vector&lt;int&gt; Putty(n + 1);
+    Putty[1] = 1;
+
+    while (q.size() > 0) {
+      int tmp = q.front();
+      q.pop();
+      Mark[tmp] = 1;
+      for (int i = 0; i &lt; G[tmp].size(); i++) {
+        if (Mark[G[tmp][i]] == 0) {
+          q.push(G[tmp][i]);
+          Putty[G[tmp][i]] = tmp;
+          Level[tmp]++;
+        }
+      }
+    }
+
+    int count_node = 0;
+    for (int i = 1; i &lt;= n; i++) {
+      if (Level[i] > 2) {
+        count_node++;
+        count_node++;
+      } else if (Level[i] == 2) {
+        count_node++;
+      }
+    }
+
+    if (count_node > 1) {
+      cout &lt;&lt; 0 &lt;&lt; '\n';
+    } else if (count_node == 0) {
+
+      // это дерево бамбук
+      long long res = 1;
+      for (int i = 1; i &lt;= n; i++) {
+        res = (res * 2) % mod;
+      }
+      cout &lt;&lt; res &lt;&lt; '\n';
+    } else {
+      // нужно найти количство узлов от листа до развилки
+      int id_node1 = -1;
+      int id_node2 = -1;
+      for (int i = 1; i &lt;= n; i++) {
+        if (Level[i] == 0) {
+          if (id_node1 == -1) {
+            id_node1 = i;
+          } else {
+            id_node2 = i;
+          }
+        }
+      }
+
+      int len1 = 0;
+      int len2 = 0;
+      while (Level[Putty[id_node1]] != 2) {
+        id_node1 = Putty[id_node1];
+        len1++;
+      }
+
+      while (Level[Putty[id_node2]] != 2) {
+        id_node2 = Putty[id_node2];
+        len2++;
+      }
+
+      if (len1 == len2) {
+        long long res = 2;
+
+        while (Putty[id_node1] != id_node1) {
+          id_node1 = Putty[id_node1];
+          res = (res * 2) % mod;
+        }
+        cout &lt;&lt; res &lt;&lt; '\n';
+      } else {
+        long long res = 3;
+        while (Putty[id_node1] != id_node1) {
+          id_node1 = Putty[id_node1];
+          res = res * 2 % mod;
+        }
+        for (int j = 0; j &lt; max(len1, len2) - min(len1, len2) - 1; j++) {
+          res = (res * 2) % mod;
+        }
+        cout &lt;&lt; res &lt;&lt; '\n';
+      }
+    }
+
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -740,7 +976,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число, минимальную стоимость пути от вершины 1 до n.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 3 2
@@ -771,7 +1008,13 @@ int main() {
 11
 </pre>
 
-  <p>Для второго набора входных данных оптимальный путь это 1→2→1→3, веса рёбер равны 5,5,13, так что стоимость равна min(5,5,13)+max(5,5,13)=5+13=18. Можно доказать, что нет пути с меньшей стоимостью.</p>
+    <p>Для второго набора входных данных оптимальный путь это 1→2→1→3, веса рёбер равны 5,5,13, так что стоимость равна min(5,5,13)+max(5,5,13)=5+13=18. Можно доказать, что нет пути с меньшей стоимостью.</p>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Бинпоиском находим дорогие пути. И делаем СНМ. В СНМ запоминаем самое дешевое и самое дорогое. После сортировки стоимости путей, находим бинпоиском самый дорогой путь. Два указателя: левый на левой границе, на самом дешевом пути, правый - на дорогом, который мы нашли бинпоиском. Определим результат как сумму дешевого и дорогого. Левый мы не можем сдвинуть левее, потому что некуда. Правый мы не будем двигать правее, потому что будет только хуже. Сдвигаем левый указатель вправо, то есть дешевый становится дороже, а правый указатель влево, то есть дорогой становится дешевле. Обновляем результат. Двигаем, пока происходят улучшения. Если улучшения уже не происходят, то нет смысла двигать их дальше, на этом надо остановиться.</p>
+  </details>
 </article>
 
 
@@ -805,7 +1048,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите ответ на все запросы в одной новой строке, разделенной пробелами.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 5 5
@@ -830,5 +1074,7 @@ int main() {
 1 1 2 1 0
 2 2 3 2 1 1 1 2
 </pre>
+  </details>
+
 </article>
 
